Add BETA header to console; Open beta dictionary update

--- a/MultiLanguage/languages/RU/dictionaries/Events.json
+++ b/MultiLanguage/languages/RU/dictionaries/Events.json
@@ -126,6 +126,7 @@
   "Look at those dark clouds looming over the horizon...": "Посмотри на эти тёмные тучи, нависшие над горизонтом...",
   "I hope they come this way.": "Я надеюсь, что они придут сюда.",
   "I like this weather because it makes everyone disappear... you know?": "Люблю такую погоду, потому что она заставляет всех вокруг исчезнуть... понимаешь?",
+  "Being around people makes me feel anxious.": "Находясь рядом с людьми, я чувствую себя тревожно.",
   "I don't feel that way around you, though.": "Но, рядом с тобой я так себя не чувствую.",
   "We're getting soaked...": "Мы промокли...",
   "Here... There's room for two.": "Вот... Это комната для двоих.",
@@ -1549,7 +1550,7 @@
   "He and I have a lot in common, actually.": "На самом деле, у нас с ним много общего.",
   "I don't usually like to talk about it... But we've been friends for a while now and I think I can trust you.": "Я обычно об этом не говорю... Но мы с тобой уже давно дружим и кажется, я могу тебе доверять .",
   "Have you ever wondered why I live with my grandparents?": "Ты когда-нибудь думал, почему я живу с бабушкой и дедушкой?^Ты когда-нибудь думала, почему я живу с бабушкой и дедушкой?",
-  "My father wasn't a good guy... He... Well he ruined everything for me and my mom.": "Видишь ли, мой отец был не очень-то славным... Он... Ну, он испортил нам с мамой жизнь.",
+  "My father wasn't a good guy... He... Well he ruined everything for me and my mom.": "Видишь ли, мой отец был не очень-то хорошим... Он... Ну, он испортил нам с мамой жизнь.",
   "Half the time he was gone... The other half he'd drink all night and tell me I'm worthless, that I'd never amount to anything.": "Полдня он не появлялся... В остальную половину, пил всю ночь и говорил, что я никчёмный и ничего не достигну.",
   "I think he resented me for being young... Bitter because he'd wasted his youth doing nothing and had gotten nowhere in life.": "Думаю его бесило то, что я молодой... Иронично, ведь сам он свою молодость потратил впустую, так ничего и не достингув.",
   "Well... that's my take on it, anyway. Who knows what was going on in his mind.": "Ну... в любом случае, мне так кажется. Кто знает, что у него было на уме.",
@@ -1564,7 +1565,7 @@
   "Hmmph. I could've done it myself! And I can certainly move around on my own!": "Хммм. Я бы и сам справился! И уж точно могу передвигаться сам!",
   "How feeble do you think I am?": "Считаешь что я настолько немощен?",
   "@player? You were watching us?": "@player? Ты всё видел?^@player? Ты всё видела?",
-  "I was. You did a kind thing there, Penny.": "Да. Ты правильно поступила, Пэнни.",
+  "I was. You did a kind thing there, Penny.": "Да. Ты правильно поступила, Пенни.",
   "You should've left him alone. Now he's grumpy.": "Тебе стоило оставить его в покое. Теперь он хмурится.",
   "I'm just taking a walk, minding my own business.": "Я просто тут прогуливаюсь, занимаюсь своими делами.",
   "*sigh*...No, no... I'm sorry, miss. I shouldn't have gotten so angry.": "*вздох*...Нет, нет... Извините меня, мисс. Не стоило мне так сердиться.",
@@ -1584,7 +1585,7 @@
   "You're right, sir. Sam should respect private property.": "Вы правы, сэр. Сэм должен уважать частную собственность.",
   "Don't blame Sam. There's nowhere else for him to ride!": "Не вини Сэма. Ему больше негде кататься!",
   "I'm staying out of this.": "Это не моё дело.",
-  "Fine! I just won't ride my skateboard ever again. Happy?": "Отлично! Я просто больше не притронусь к скейтбору. Счастливы?",
+  "Fine! I just won't ride my skateboard ever again. Happy?": "Отлично! Я просто больше не притронусь к скейтборду. Счастливы?",
   "Exactly! If there was a park in town, I could ride there and everyone would be happy.": "Именно! Если бы в городе был парк, я бы мог кататься в нём и все были бы счастливы.",
   "Hmmph. Alright.": "Хммм. Ладно.",
   "You're being difficult, Sam. I have no problem with you riding around town, just try not to cause any damage! It's that simple.": "С тобой сложно, Сэм. Я не против, что ты разъезжаешь по городу, но постарайся хотя бы ни чего не ломать! Это же так просто.",
@@ -1600,16 +1601,16 @@
   "Umm... Okay everyone!": "Ммм... Ладно все!",
   "Thanks for coming to my art show.": "Спасибо за то, что пришли на мою выставку.",
   "As some of you know, I came to this town because I wanted to draw inspiration from the beautiful surroundings.": "Как не которые из вас знают, я приехала в этот город в поисках вдохновения, среде этой чудесной природы.",
-  "This place really feels like home now.": "И теперь это место стало для меня домом..",
+  "This place really feels like home now.": "И теперь это место стало для меня домом.",
   "Okay. I'm going to introduce my sculptures now.": "Ладно, теперь я бы хотела представить вам мои скульптуры.",
   "I haven't named this one, yet. She started out as an exercise in human anatomy, but I ended up seeing her through to completion.": "У этой ещё нет имени, Она начиналась, как олицетворение человеческой анатомии, но стала моим видением наказания.",
   "Her expression is intentionally unclear... is she embarrassed, amused, pained? I'll leave that for you to decide.": "Выражение её лица умышленно не чётко... смущается ли она? Или испытывает боль,  смятение. Вам решать.",
   "This one's called 'Post-Dimensional Nullspace'. It represents the boundary of human imagination.": "Эта скульптура называется 'Пост-пространственный Вакуум'. Она отражает ограниченность человеческого воображения.",
   "The shape and color came to me vividly when I was in a 'trance state'.": "Формы и цвета пришли ко мне когда я была в состоянии 'транса'.",
   "I've been calling this one 'Egg Heads'. I wanted to create an animatronic humanoid statue to toy with the viewer's ability to properly attribute personhood to a physical entity.": "А эта называется \"Яйцеголовый\". Я хотела создать движущуюся человекообразную статую, что бы поиграть со способностью наблюдателя, к соотношению себя с физической бесконечностью.",
-  "And the last one is called 'Wood Sculpture 3'. It's a celebration of my favorite sculpting material... wood.": "И наконец, вот, она зовётся 'Деревянная Скульптура 3'. Она олицетворяет мой любимый материал для резки... дерево.",
+  "And the last one is called 'Wood Sculpture 3'. It's a celebration of my favorite sculpting material... wood.": "И наконец последняя, она зовётся 'Деревянная Скульптура 3'. Она олицетворяет мой любимый материал для резки... дерево.",
   "Well, those are my sculptures!": "Ну, вот такие у меня скульптуры!",
-  "Oh! One last thing.": "О! Ещё кое что.",
+  "Oh! One last thing.": "О! Ещё кое-что.",
   "I'd like to say thanks to my special friend, @player.": "Я бы хотела поблагодарить моего особенного друга, @player",
   "He gave me the idea for this show and the courage to go through with it. I know that sounds cheesy, but it's true.": "Именно он подал мне идею организовать эту выставку и вдохнул в меня смелость прийти на неё. Я знаю, что это звучит глупо, но это правда.",
   "She gave me the idea for this show and the courage to go through with it. I know that sounds cheesy, but it's true.": "Именно она подала мне идею организовать эту выставку и вдохнула в меня смелость, прийти на неё. Я знаю, что это звучит глупо, но это правда.",
@@ -1618,7 +1619,7 @@
   "I love your art, Leah! 'Post-Dimensional Nullspace' is my favorite.": "Мне понравилось твоё творчество, Лия!  'Пост-пространственный Вакуум' моё любимое.",
   "Great use of wood!": "Великолепное использование древесины!",
   "Thanks for doing this!": "Спасибо за то, что делаешь это!",
-  "Thanks, everyone!": "Спасибо,всем!",
+  "Thanks, everyone!": "Спасибо всем!",
   "Now let's start the bidding on these wonderful art pieces... A marvelous addition to your home!": "А теперь приступим к аукциону этих прекрасных изделий... Чудесное дополнение у вашему дому!",
   "Do I hear 5000g for the pink one?": "Кто-то сказал 5000g за розовую?",
   "Wow! I'm exhausted.": "Ого! У меня сил нет.",
@@ -1663,8 +1664,8 @@
   "Quick! Hide in the bed!": "Быстро! Прячься в кровать!",
   "What's wrong, Honey? Were you doing something... bad?": "Что такое, Дорогой? Ты занимался чем-то... нехорошим?",
   "I thought I heard some weird sounds coming from your room...": "Мне показалось, что я слышала странные звуки, доносящиеся из твоей комнаты...",
-  "No Mom! I was just... doing push-ups! I wanna beat Dad at arm-wrestling some day! ...heh.": "Нет, Мам! Я просто... отжимался! Хочу однажды победить Папу в арм-рестлинге! ...хех.",
-  "Oh! *giggle*... That explains why you're all red and sweaty.": "Ах! *хихикание*... Это объясняет, почему ты весь красный и потный.",
+  "No Mom! I was just... doing push-ups! I wanna beat Dad at arm-wrestling some day! ...heh.": "Нет, Мам! Я просто... отжимался! Хочу однажды победить Папу в армреслинге! ...хех.",
+  "Oh! *giggle*... That explains why you're all red and sweaty.": "Ах! *хихиканье*... Это объясняет, почему ты весь красный и потный.",
   "Okay, well good luck. I'll see you in the morning.": "Ладно, в таком случае, желаю удачи. Увидимся утром.",
   "Goodnight, Mom.": "Спокойной ночи, мама.",
   "Whew... That was close.": "Фух... Это было близко.",
@@ -1685,10 +1686,10 @@
   "These days, the young folk would rather sit in front of the TV than engage with the community.": "Нынче молодёжь лучше будет сидеть перед телевизором, чем общаться с людьми.",
   "But listen to me, I sound like an old fool.": "Посмотрите на меня, брюзжу как старый дурак",
   "Joja Corporation has been hounding me to sell them the land so they can turn it into a warehouse...": "Корпорация Joja запугивали меня что бы я продал им участок земли под постройку склада...",
-  "Pelican Town could use the money, but there's something stopping me from selling it... I guess old timers like me get attached to relics of the past... Ah well.": "Пеликан Тауну пригодились бы эти деньги, но что то останавливает меня от этого... полагаю старики вроде меня слишком привязаны к прошлому... ну ладно.",
+  "Pelican Town could use the money, but there's something stopping me from selling it... I guess old timers like me get attached to relics of the past... Ah well.": "Пеликан Тауну пригодились бы эти деньги, но что-то останавливает меня от этого... полагаю старики вроде меня слишком привязаны к прошлому... ну ладно.",
   "If anyone else buys a Joja Co. Membership I'm just gonna go ahead and sell it.": "Если кто-нибудь купит членство в Joja Co, я пойду им навстречу и продам им землю.",
   "*sigh*... Here, let's go inside...": "*вздох*... Пошли, зайдём внутрь...",
-  "Hmm? What's this?...": "Хмм? Что это?...",
+  "Hmm? What's this?...": "Хм? Что это?...",
   "I guess Vincent and Jas must've been playing in here.": "Должно быть Винсент и Джес здесь игрались.",
   "This place is even more dilapidated than I remember.": "Это место еще более ветхое чем я помню.",
   "What?": "Что такое?",
@@ -1755,18 +1756,18 @@
   "I've also recieved a big promotion! Hehehe.": "Ну а я получил большое повышение! Хахаха.",
   "The president of the company asked me to give you this exclusive gift as a way of saying 'thanks'.": "Президент компании попросил меня вручить вам этот уникальный подарок, в качестве благодарности.",
   "Grr... sounds like those raccoons are back again. Filthy varmints...": "Гррр... похоже что эти еноты снова вернулись. Грязные вредители...",
-  "Ah, you turned up at the right moment, son.": "Аах, ты вернулся как раз вовремя, сынок.",
-  "Ah, you turned up at the right moment, miss.": "Аах, ты вернулась как раз вовремя, мисс.",
+  "Ah, you turned up at the right moment, son.": "Ах, ты вернулся как раз вовремя, сынок.",
+  "Ah, you turned up at the right moment, miss.": "Ах, ты вернулась как раз вовремя, мисс.",
   "Could you do an old man a favor? Could you go around the corner and scare off those raccoons for me? They've been causin' a real mess.": "Можешь сделать старику одолжение? Можешь выскочить из-за угла и напугать этих енотов ради меня? Они наводят жуткий беспорядок.",
   "Thanks. Make sure you give 'em a good scare so they never come back.": "Спасибо. Постарайся напугать их как следует, что бы они ни когда больше не возвращались.",
   "It was me... I'm sorry.": "Это был я... Прости.",
   "I find a lot of hot, fresh food in these cans... stuff that will go to waste if I don't take it.": "Я нашёл много горячей, свежей еды в этих бочках... они пропадут если я не возьму их.",
   "You can go on home. I promise I won't rummage in George's can anymore.": "Можешь идти домой, Я даю слово что больше не буду рыться в мусорной корзине Джорджа.",
-  "You can tell him you scared off the raccoons for good.": "Можешь сказать ему что как следует напугал енотов.",
+  "You can tell him you scared off the raccoons for good.": "Можешь сказать ему что я как следует напугал енотов.",
   "Wait.": "Подожди.",
   "I know what you were doing, Linus.": "Я знаю что ты делаешь, Линус.",
   "If you need food... just ask. I don't want anyone in Pelican Town to go hungry.": "Если тебе нужна еда.. ты можешь просто попросить. Я не хочу что бы кто голодал в Пеликан Тауне.",
-  "Here. I've got a basket of zuchinni fritters for you. Just make sure you dip them in my spicy marinara!": "Вот. У меня есть коробочка с оладьями из цуккини. Просто, перед тем как есть обязательно макни их в мой соус маринара!",
+  "Here. I've got a basket of zuchinni fritters for you. Just make sure you dip them in my spicy marinara!": "Вот. У меня есть коробочка с оладьями из цукини. Просто, перед тем как есть обязательно макни их в мой соус маринара!",
   "Go on... take it.": "Давай... бери.",
   "__comment": "Trailer",
   "Ughh... It's so dirty in here.": "Ох... Здесь так грязно.",
@@ -1804,25 +1805,25 @@
   "Mediary between physical and ethereal.": "Странник между физическим миром и миром духов.",
   "Master of the seven elementals.": "Мастер семи элементалей.",
   "Keeper of the sacred cha-... you get the point.": "Хранитель священной чак... ну ты понял.",
-  "And you... @player. The one whose arrival I have long foreseen.": "И вы...  @player. Тот, чье появления я так давно предвидел.",
+  "And you... @player. The one whose arrival I have long foreseen.": "И ты... @player. Тот, чьё появления я так давно предвидел.",
   "Here, I'd like to show you something.": "Вот, я хотел тебе кое-что показать.",
   "Behold!": "Вот!",
   "You've seen one before, haven't you?": "Ты видел такое раньше, не так ли?",
   "They call themselves the 'Junimos'...": "Они называют себя 'Юнимо '...",
   "Mysterious spirits, these ones... For some reason, they refuse to speak with me.": "Довольно загадочные ребята... по какой-то причине они отказываются общаться со мной.",
   "I'm not sure why they've moved into the community center, but you have no reason to fear them.": "Я не знаю почему они появились в общественном центре, но они не опасны.",
-  "Hmmm? You found a golden scroll written in an unknown language?": "Хмм? Ты нашел золотой свиток написанный на неизвестном языке?",
+  "Hmmm? You found a golden scroll written in an unknown language?": "Хмм? Ты нашёл золотой свиток написанный на неизвестном языке?",
   "Most interesting...": "Очень интересно...",
   "Stay here. I'm going to see for myself. I'll return shortly.": "Побудь здесь. Я должен найти себя. Скоро вернусь.",
-  "I found the note...": "Я нашел записку...",
+  "I found the note...": "Я нашёл записку...",
   "The language is obscure, but I was able to decipher it:": "Малопонятный язык, однако я смог расшифровать его:",
-  "We, the Junimo, are happy to aid you. In return, we ask for gifts of the valley. If you are one with the forest then you will see the true nature of this scroll.": "Мы, Юнимо , счастливы помочь тебе. В замен, мы просим от тебя дары долины. Если станешь единым с лесом, то тебе откроется истинная природа свитка.",
+  "We, the Junimo, are happy to aid you. In return, we ask for gifts of the valley. If you are one with the forest then you will see the true nature of this scroll.": "Мы, Юнимо, счастливы помочь тебе. Взамен, мы просим от тебя дары долины. Если станешь единым с лесом, то тебе откроется истинная природа свитка.",
   "Hmm... 'One with the forest'... What do they mean?": "Хм... 'Один с лесом'... Что это означает?",
   "...*sniff*...*sniff*...": "...*хнык*...*хнык*...",
   "Ah-hah!": "Аха-ха!",
   "Come here!": "Иди сюда!",
   "My cauldron is bubbling with ingredients from the forest.": "В моём котле кипят сущности леса.",
-  "Baby fern, moss grub, caramel-top toadstool... Can you smell it?": "Дитя папоротника, личинка моха, карамельная поганка... чувствуешь запах?",
+  "Baby fern, moss grub, caramel-top toadstool... Can you smell it?": "Дитя папоротника, личинка мха, карамельная поганка... чувствуешь запах?",
   "Here. Drink up. Let the essence of the forest permeate your body.": "Вот. Выпей. Пусть сущность леса пропитает твоё тело.",
   "You've gained the power of forest magic! Now you can decipher the true meaning of the junimo scrolls.": "Ты приобрел силу лесной магии! Теперь ты можешь расшифровать свиток Юнимо."
 }
