--- a/MultiLanguage/languages/RU/dictionaries/Festivals.json
+++ b/MultiLanguage/languages/RU/dictionaries/Festivals.json
@@ -6,7 +6,7 @@
   "Dance of the Moonlight Jellies": "Танец \"Лунных медуз\"",
   "Stardew Valley Fair": "Ярмарка Долины Стардью",
   "Spirit's Eve": "Канун Дня Духов",
-  "Festival of Ice": "Ледяной праздник",
+  "Festival of Ice": "Фестиваль Льда",
   "Feast of the Winter Star": "Праздник Зимней Звезды",
   "__comment": "fall16",
   "Stardew Valley Fair": "Ярмарка долины Стардью",
