--- a/MultiLanguage/languages/RU/dictionaries/_Game1.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Game1.json
@@ -10,10 +10,10 @@
   "You found a =stardrop! It's strange, but the taste reminds you of @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Странно, но вкус напоминает вам о @keyP. ^^Ваш максимальный уровень энергии увеличился.",
   "You found a =stardrop! You feel an unwavering connection to the valley itself. @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Вы чувствуете непоколебимую связь с самой долиной. @key. ^^Ваш максимальный уровень энергии увеличился.",
   "You found a =stardrop! Your mind is filled with thoughts of... ConcernedApe? (Well, thanks!) @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Ваш разум забит мыслями о... ConcernedApe? (Что ж, Спасибо!) @key. ^^Ваш максимальный уровень энергии увеличился.",
-  "Stardew Valley has crashed...": "Stardew Valley сломалась...",
+  "Stardew Valley has crashed...": "Игра Stardew Valley сломалась...",
   "Please send the error report or a screenshot of this message to @ConcernedApe. (http://stardewvalley.net/contact/)": "Пожалуйста, отправьте отчет об ошибке или скриншот этого сообщения на @ConcernedApe. (http://stardewvalley.net/contact/)",
   "Dwarf King": "Король гномов",
-  "Mr. Lewis": "Г-н Льюис",
+  "Mr. Lewis": "М-р Льюис",
   "How much do you want to bet? (You have @number club coins).": "Сколько хотите поставить? (У вас @number клубных монет).",
   "Semitones above C3:": "Полутона выше C3:",
   "Drum Sound:": "Звук барабана:",
@@ -56,18 +56,18 @@
   "Thursday": "Четверг",
   "Friday": "Пятница",
   "Saturday": "Суббота",
-  "You have @number club coins.": "Ваши клубные монеты: @number",
+  "You have @number club coins.": "У вас @number клубных монет.",
   "Play Again": "Играть снова",
-  "Leave": "Покинуть",
+  "Leave": "Уйти",
   "JACKPOT WINNER!! You win @number Club Coins.": "ДЖЕКПОТ СОРВАН!!! Вы выиграли @number клубных монет.",
   "You win @number Club Coins.": "Вы выиграли @number клубных монет.",
   "You don't have enough money to buy that.": "У вас не хватает денег на эту покупку.",
   "Gamepad mode activated": "Режим геймпада активирован",
-  "Gamepad disconnected": "Геймпад отключен",
+  "Gamepad disconnected": "Геймпад отключён",
   "Screenshot mode activated. Press 'F4' to exit.": "Режим скриншота активирован. Для выхода нажмите \"F4\".",
   "Next stop: Stardew Valley.": "Следующая остановка: Долина Стардью.",
   "Next stop: Calico Desert.": "Следующая остановка: Пустыня Калико.",
-  "...@player?": "..@player?",
+  "...@player?": "...@player?",
   "__comment dont know if it used or not": "__comment dont know if it used or not",
   "X or Left Click - Advance Dialogue": "X или ЛКМ -  Выбор диалога",
   "X or Left Click - Select": "X или ЛКМ - Выбрать",
@@ -81,7 +81,7 @@
   "@newline C or Right Click - Use Item": "@newline C или ПКМ - Использовать предмет",
   "@newline E, F or Mouse Mid. - Store Item": "@newline E, F или СКМ - Продать предмет",
   "@newline Z or Mouse Wheel - Switch Item": "@newline Z или Колесико мыши - Переключить предмет",
-  "Today's festival is being set up. Come back later.": "Сегодняшний праздник еще готовится. Приходите позже.",
+  "Today's festival is being set up. Come back later.": "Сегодняшний праздник ещё готовится. Приходите позже.",
   "__comment key is server name, no need to translate": "__comment key is server name, no need to translate",
   "Connecting to @key...": "Подключение  к @key..",
   "Melting Winter Snow...": "Тает зимний снег..."
