--- a/MultiLanguage/languages/RU/dictionaries/_KeyWords.json
+++ b/MultiLanguage/languages/RU/dictionaries/_KeyWords.json
@@ -2,7 +2,7 @@
   "__comment Animals": "__comment Animals",
   "﻿White Chicken": "Белая курица",
   "Brown Chicken": "Рябая курица",
-  "Void Chicken": "Цыпленок пустоты",
+  "Void Chicken": "Цыплёнок пустоты",
   "Chickens": "Куры",
   "Duck": "Утка",
   "Ducks": "Утки",
@@ -76,7 +76,7 @@
   "Tapper": "Метчик",
   "Botanist": "Ботаник",
   "Tracker": "Охотник",
-  "Miner": "Шахтер",
+  "Miner": "Шахтёр",
   "Geologist": "Геолог",
   "Blacksmith": "Кузнец",
   "Prospector": "Золотоискатель",
@@ -97,17 +97,17 @@
   "Shrimp": "Креветка",
   "Goldfish": "Золотая рыбка",
   "Soggy Spaghetti": "Сырые Макароны",
-  "Baby Duck": "Утенок",
+  "Baby Duck": "Утёнок",
   "Mouse": "Мышь",
   "Carrot Stick": "Морковная палочка",
   "Twig": "Ветка",
   "Trout": "Форель",
-  "Paper Mache": "Папье-Маше",
+  "Paper Mache": "Папье-маше",
   "Buttermilk": "Простокваша",
   "Pancake": "Блинчик",
   "Cardboard": "Картон",
   "Balsa Wood": "Пробковое дерево",
-  "Hardened Clay": "Обожженная глина",
+  "Hardened Clay": "Обожжённая глина",
   "Prairie Dog": "Суслик",
   "Leather Boot": "Кожаный Ботинок",
   "Hot Mustard": "Острая Горчица",
@@ -217,10 +217,12 @@
   "depressing": " депрессивный",
   "laughable": "смешно",
   "sad": "грустно",
-  "stressful": "напряженно",
+  "stressful": "напряжённо",
   "pitiful": "жалко",
   "childish": "по-детски",
   "__comment SpousalEndearment": "__comment SpousalEndearment",
+  "husband": "муж",
+  "wife": "жена",
   "Pookie": "Солнышко^Пупсик",
   "Love": "Любовь моя",
   "Hot Stuff": "Горячий Парень^Горячая Штучка",
@@ -245,7 +247,7 @@
   "salad": "салат",
   "stew": "рагу",
   "casserole": "запеканка",
-  "stir-fry": "жаренный в раскаленном масле",
+  "stir-fry": "жаренный в раскалённом масле",
   "calzone": "кальцоне",
   "taco": "тако",
   "burrito": "буррито",
@@ -311,7 +313,7 @@
   "Purple": "Фиолетовый",
   "Gooey": "Липкий",
   "Chalky": "Меловой",
-  "Green": "Зеленый",
+  "Green": "Зелёный",
   "Plush": "Плюшевый",
   "Chunky": "Коренастый",
   "Gigantic": "Гигантский",
@@ -378,21 +380,21 @@
   "far away from": "вдали от",
   "uncomfortably close to": "в близости от",
   "way above the": "дорогой выше ",
-  "miles below": "милью ниже",
-  "on a different planet from": "на другой планете от",
-  "in a different century than": "в другом веке, чем",
+  "miles below": "милей ниже",
+  "on a different planet from": "на планете отличной от",
+  "in a different century than": "в веке отличном от",
   "__comment Dialogue.places": "__comment Dialogue.places",
-  "Castle Village": "Кастл Виледж",
-  "Basket Town": "Баскет Товн",
-  "Pine Mesa City": "Пайн Меса сити",
+  "Castle Village": "Кастл-Вилледж",
+  "Basket Town": "Баскет-Таун",
+  "Pine Mesa City": "Пайн-Меса Сити",
   "Point Drake": "Дрэйк Поинт",
-  "Minister Valley": "Долина Министр",
+  "Minister Valley": "Долина Министер",
   "Grampleton": "Грампелтон",
-  "Zuzu City": "Заза сити",
+  "Zuzu City": "Зузу Сити",
   "a small island off the coast": "небольшой остров у побережья",
   "Fort Josa": "Форт Джоса",
   "Chestervale": "Честервейл",
-  "Fern Islands": "Остова Ферн",
+  "Fern Islands": "Острова Ферн",
   "Tanker Grove": "Роща Тэнкер",
   "__comment Dialogue.colors": "__comment Dialogue.colors",
   "crimson": "малиновый",
@@ -429,7 +431,7 @@
   "Vegetable": "Овощ",
   "Seed": "Семена",
   "Monster Loot": "Добыча с монстра",
-  "Artisan Goods": "Ремесленый товар",
+  "Artisan Goods": "Ремесленный товар",
   "Cooking": "Готовка",
   "Decor": "Декор",
   "Fishing Tackle": "Рыболовная снасть",
