--- a/MultiLanguage/languages/RU/dictionaries/_Locations.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Locations.json
@@ -39,7 +39,7 @@
   "...No response.": "...Нет ответа",
   "Kid: 'Sup?": "Ребенок: Как сам?",
   "Kid: Dude, don't touch my board.": "Ребенок: Чувак, не трогай мою доску.",
-  "Lady: We just got back from the Zuzu City fun park... didn't we Simon?": "Дама: Мы только что вернулись из парка развлечений в городе Зузу... Или не вернулись Саймон?",
+  "Lady: We just got back from the Zuzu City fun park... didn't we Simon?": "Дама: Мы только что вернулись из парка развлечений в городе Зузу... Не правда-ли, Саймон?",
   "Simon: *babble*... *slurp*": "Саймон: *бормочет*... *чавкает*",
   "Lady: He's shy around strangers.": "Дама: Он немного стеснительный.",
   "Moustached Man: Don't worry, friend. I've got my eyes peeled for the valley.": "Усатый мужчина: Не беспокойся, друг. Я смогу очистить свои глаза в долине.",
@@ -156,7 +156,7 @@
   "So I was at the store the other day and Pierre showed me a fresh @key you brought in.": "Так что я был в магазине на днях и Пьер показал мне свежий @key, который ты продал.^Так что я был в магазине на днях и Пьер показал мне свежий @key, который ты продала.",
   "I bought it.": "Я купил это.",
   "So I was at the store the other day and Pierre showed me @key @key you brought in.": "Так что я был в магазине на днях и Пьер показал мне свежий @key, который ты продал.^Так что я был в магазине на днях и Пьер показал мне свежий @key, который ты продала.",
-  "I bought the tastiest @key from Pierre's shop the other day.": "Я купил вкуснейший @key в магазине Пьера в другой день.",
+  "I bought the tastiest @key from Pierre's shop the other day.": "Я купил вкуснейший @keyR в магазине Пьера недавно.",
   "He said that he grew the thing in his own backyard. I didn't know Pierre was such a talented farmer!": "Он сказал, что вырастил это на заднем дворе своего дома. Я не знал, что Пьер такой талантливый фермер!",
   "Looks like you might have some competition, huh?": "Похоже, у вам могла бы быть отличная конкуренция, ха?",
   "He said he cooked the thing himself using local ingredients. I didn't know Pierre was such @key chef!": "Он сказал, что приготовил это сам, из местных продуктов. Оказывается, Пьер ещё и @key повар!",
