--- a/MultiLanguage/languages/RU/dictionaries/_Menus.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Menus.json
@@ -2,7 +2,7 @@
   "__comment Menus/AboutMenu.cs": "__comment Menus/AboutMenu.cs",
   "Created by": "Создано",
   "__comment Menus/AnimalQueryMenu.cs": "__comment Menus/AnimalQueryMenu.cs",
-  "Home changed": "Дом изменен",
+  "Home changed": "Дом изменён",
   "That Building Is Full": "Это здание заполнено",
   "That Is My Home": "Это мой дом",
   "@key Can't Live There.": "@key не может там жить.",
@@ -15,12 +15,12 @@
   "Age: @number months (Baby)": "Возраст: @number м (детёныш)",
   "Parent: @key": "Родитель: @key",
   "Are you sure?": "Вы уверены?",
-  "Please choose a @key for your @key": "Пожалуйста выберете @keyV для вашего @keyR",
+  "Please choose a @key for your @key": "Пожалуйста, выберете @keyV для вашего @keyR",
   "__comment Menus/Billboard.cs": "__comment Menus/Billboard.cs",
   "@key's Birthday": "День рождения @keyR",
   "@key' Birthday": "День рождения @keyR",
   "Nothing is posted today.": "Сегодня нет объявлений.",
-  "Accept Quest": "   Принять  ",
+  "Accept Quest": "   Принять",
   "__comment Menus/BlueprintsMenu.cs": "__comment Menus/BlueprintsMenu.cs",
   "Not Enough Resources": "Не хватает ресурсов",
   "Incorrect Building Type": "Неправильный тип здания",
@@ -43,7 +43,7 @@
   "Boiler Room": "Бойлерная",
   "Vault": "Погреб",
   "Bulletin Board": "Доска объявлений",
-  "Must be deposited at Community Center": "Должен быть отнесен в Комьюнити центр",
+  "Must be deposited at Community Center": "Должен быть отнесён в Общественный Центр",
   "Can't demolish during construction": "Невозможно снести во время строительства",
   "Can't demolish until animals are relocated": "Невозможно снести пока животные внутри",
   "Okay, I'll start working on your new @key the day after tomorrow. I always take festivals off.": "Хорошо, я преступлю к работе над новым @key завтра. Я всегда отдыхаю во время фестиваля.",
@@ -121,7 +121,7 @@
   "+1 Pickaxe Proficiency": "+1 к владению Киркой",
   "+5 HP": "+5 жизни",
   "Luck Increased": "Удача увеличена",
-  "Animal products worth 10% more.": "Животные рподукты стоят на 10% дороже.",
+  "Animal products worth 10% more.": "Животные продукты стоят на 10% дороже.",
   "Crops worth 10% more.": "Растения стоят на 10% больше.",
   "Befriend coop animals quicker.": "Легче подружиться с птицами.",
   "Incubation time cut in half.": "Инкубатор работает в два раза быстрее.",
@@ -137,7 +137,7 @@
   "Crab pots no longer require bait.": "Ловушки для крабов больше не требуют приманки.",
   "Wood worth 50% more.": "Дерево стоит на 50% дороже.",
   "Chance for double harvest of foraged items.": "Шанс для двойного урожая при сборе.",
-  "All trees have a chance to drop hardwood.": "С деревьев, иногда, падает твердая древесина.",
+  "All trees have a chance to drop hardwood.": "С деревьев, иногда, падает твёрдая древесина.",
   "Syrups worth 25% more.": "Сиропов на 25% больше.",
   "Foraged items are always highest quality.": "Добываемый урожай всегда высокого качества.",
   "Location of forageable items revealed.": "Открыто расположение собираемых предметов.",
@@ -157,7 +157,7 @@
   "Choose a profession:": "Выберите профессию:",
   "New cooking recipe: @key": "Новый кулинарный рецепт: @key",
   "New crafting recipe: @key": "Новый рецепт крафта: @key",
-  "No Saved Games Found": "Сохраненные игры не найдены",
+  "No Saved Games Found": "Сохранённые игры не найдены",
   "Delete File": "Удалить файл",
   "Really delete file: @key?": "Точно удалить файл: @key?",
   "Name": "Имя",
@@ -194,7 +194,7 @@
   "Beach": "Пляж",
   "Woods": "Лесная роща",
   "Sewer": "Канализация",
-  "Marnie's Ranch@newlineOpen 9:00AM to 4:00PM most days": "Ранчо Марни@newlineОткрыто с 9:00AM до 4:00PM большиство дней",
+  "Marnie's Ranch@newlineOpen 9:00AM to 4:00PM most days": "Ранчо Марни@newlineОткрыто с 9:00AM до 4:00PM большинство дней",
   "Leah's Cottage": "Коттедж Лии",
   "1 Willow Lane@newlineHome of Jodi, Kent & Sam": "Улица Ивы, дом 1@newlineДом Джоди, Кента и Сэма",
   "2 Willow Lane@newlineHome of Emily & Haley": "Улица Ивы, дом 2@newlineДом Эмили и Хейли",
@@ -230,13 +230,13 @@
   "Lonely Stone": "Одинокий Камень",
   "New Reward!": "Новая награда!",
   "Press new key...": "Нажмите любую кнопку...",
-  "Key already in use. Try again...": "Эта кнопка уже занята. Попробуйте еще раз...",
+  "Key already in use. Try again...": "Эта кнопка уже занята. Попробуйте ещё раз...",
   "General:": "Общие",
   "Auto Run": "Авто Бег",
   "Show Portraits": "Показывать портреты",
   "Show Merchant Portraits": "Показывать портреты торговцев",
   "Always Show Tool Hit Location": "Показывать область взаимодействия",
-  "Gamepad Placement Tile Indicator": "Область взаимодествия геймпадом",
+  "Gamepad Placement Tile Indicator": "Область взаимодействия геймпадом",
   "Use Hardware Cursor": "Использовать обычный курсор",
   "Hide Tool Hit Location When Moving": "Скрыть обл. взаим-ия при движении",
   "Pause When Game Window Is Inactive": "Пауза когда окно игры не активно",
@@ -247,13 +247,13 @@
   "Ambient Volume": "Громкость окружения",
   "Footstep Volume": "Громкость походки",
   "Dialogue Typing Sound": "Звук печатания диалогов",
-  "Graphics:": "Графика",
+  "Graphics:": "Графика:",
   "Window Mode": "Оконный режим",
   "Resolution": "Разрешение",
   "Menu Backgrounds": "Фон меню",
-  "Lock Toolbar": "Закрепить панель интрументов",
+  "Lock Toolbar": "Закрепить панель инструментов",
   "Zoom Level": "Уровень приближения",
-  "Zoom Buttons": "Кнопки приблежения",
+  "Zoom Buttons": "Кнопки приближения",
   "Lighting Quality": "Качество освещения",
   "Low": "Низ.",
   "Med.": "Сред.",
@@ -262,7 +262,7 @@
   "Show Flash Effects": "Показывать эффект вспышки",
   "Controls:": "Управление",
   "Controller Rumble": "Обратная отдача контроллера",
-  "Invert Toolbar Scroll Direction": "Инверт. прокрутку панели интрум.",
+  "Invert Toolbar Scroll Direction": "Инверт. прокрутку панели инструм.",
   "Reset Controls To Default": "Сброс настроек управления",
   "Check/Do Action: Right-Click, @key": "Проверить/Выполнить: R-Click, @key",
   "Use Tool: Left-Click, @key": "Использовать: L-Click, @key",
@@ -275,11 +275,11 @@
   "Move Right: @key": "Вправо: @key",
   "Chat Box: @key": "Окно чата: @key",
   "Run: @key": "Бег: @key",
-  "Inventory Slot #@number": "Слот Инвенторя #@number",
+  "Inventory Slot #@number": "Слот Инвентаря #@number",
   "Name Unavailable": "Имя недоступно",
   "Great! I'll send little @key to his new home right away.": "Замечательно! Я отправлю малыша @keyR в его новый дом прямо сейчас.",
-  "Great! I'll send little @key to her new home right away.": "Замечательно! Я отправлю малышку @keyR в ее новый дом прямо сейчас.",
-  "Purchased @key": "Приобретен @key",
+  "Great! I'll send little @key to her new home right away.": "Замечательно! Я отправлю малышку @keyR в её новый дом прямо сейчас.",
+  "Purchased @key": "Приобретён @key",
   "Not Enough Money": "Не хватает денег",
   "Not enough money": "Не хватает денег",
   "Well cared-for adult chickens lay eggs every day.@newlineLives in the coop.": "Счастливые, взрослые куры откладывают яйца каждый день.@newlineЖивут в курятнике.",
@@ -288,7 +288,7 @@
   "Adults can be milked daily. A milk pail is required to harvest the milk.@newlineLives in the barn.": "Взрослые коровы могут давать молоко каждый день. Требуется ведро для сбора молока.@newlineЖивут в амбаре.",
   "These pigs are trained to find truffles!@newlineLives in the barn.": "Свиньи обучены искать трюфели!@newlineЖивут в амбаре.",
   "Happy adults provide goat milk every other day. A milk pail is required to harvest the milk.@newlineLives in the barn.": "Взрослые козы могут давать молоко каждый день. Требуется ведро для сбора молока.@newlineЖивут в амбаре.",
-  "Adults can be shorn for wool. Sheep who form a close bond with their owners can grow wool faster. A pair of shears is required to harvest the wool.@newlineLives in the barn.": "Взрослых овец можно остричь. Овцы, которые любят вас, обрастают шерстью быстрее. Требуются ножницы для стрижки.@newlineЖивут в амбаре. ",
+  "Adults can be shorn for wool. Sheep who form a close bond with their owners can grow wool faster. A pair of shears is required to harvest the wool.@newlineLives in the barn.": "Взрослых овец можно остричь. Овцы, которые любят вас, обрастают шерстью быстрее. Требуются ножницы для стрижки.@newlineЖивут в амбаре.",
   "Livestock:": "Домашний скот:",
   "Choose a @key for your new @key": "Выберите @key для нового @key",
   "Name your new animal:": "Дайте имя животному:",
@@ -297,15 +297,15 @@
   "Saving...": "Сохранение...",
   "Done": "Готово",
   "Have a look at my wares.": "Взгляни на мои товары.",
-  "Need some construction supplies? Or are you looking to re-decorate?": "Нужно что-то еще для строительства? Или ты смотришь, чтобы по новому оформить интерьер?",
+  "Need some construction supplies? Or are you looking to re-decorate?": "Нужно что-то ещё для строительства? Или ты смотришь, чтобы по новому оформить интерьер?",
   "I have a rotating selection of hand-made furniture.": "У меня есть богатый выбор мебели ручной работы.",
   "I've got some great furniture for sale.": "У меня есть хорошая мебель на продажу.",
   "Got any spare construction material to sell?": "Есть лишний материал на продажу?",
   "I've got @key that would look just @key in your house.": "У меня есть @key, который будет выглядеть просто @key в вашем доме.",
   "Too lazy to mine your own ore? No problem.": "Слишком ленивы, чтобы добывать руду самостоятельно? Нет проблем.",
   "I've got lumps of raw metal for sale. Knock yourself out.": "У меня есть различные куски метал на продажу. Сделай с ними что угодно.",
-  "Looking to sell any metals or minerals?": "Посмотришь на металлы и минералы, которые я продаю?",
-  "I can upgrade your tools with more power. You'll have to leave them with me for a few days, though.": "Я могу улучшить твои инструменты и сделать их мощнее. Правда, тебе придется оставить их у меня на несколько дней.",
+  "Looking to sell any metals or minerals?": "Хочешь продать металлы или минералы?",
+  "I can upgrade your tools with more power. You'll have to leave them with me for a few days, though.": "Я могу улучшить твои инструменты и сделать их мощнее. Правда, тебе придётся оставить их у меня на несколько дней.",
   "Need fishing supplies? You've come to the right place.": "Нужны рыболовные принадлежности? Ты обратился по адресу.^Нужны рыболовные принадлежности? Ты обратилась по адресу.",
   "Sorry about the smell.": "Извини за запах.",
   "Welcome to Pierre's! @key": "Добро пожаловать к Пьерру! @key",
@@ -321,13 +321,13 @@
   "Hiyo, poke. Did you bring coins? Gud. Me sell hats.": "Здароф, капуша. Ты приносить монетки? Харафо. Я продавать много шляпа.",
   "Rare Goods": "Редкий товар",
   "I've got a little bit of everything. Take a look!": "У меня есть всего понемногу. Посмотри!",
-  "I smuggled these goods out of the Gotoro Empire. Why do you think they're so expensive?": "Я незаконно ввез это добро из Империи Готоро. И ты еще спрашиваешь почему так дорого?",
+  "I smuggled these goods out of the Gotoro Empire. Why do you think they're so expensive?": "Я незаконно ввёз это добро из Империи Готоро. И ты ещё спрашиваешь, почему так дорого?",
   "I'll have new items every week, so make sure to come back!": "Каждую неделю у меня новинки, так что не забудь вернуться!",
   "Let me see... Oh! I've got just what you need: @key!": "Дайте-ка подумать... О! У меня есть как раз то, что тебе нужно: @key!",
-  "Beautiful country you have here. One of my favorite stops. The pig likes it, too.": "Красива у вас тут. Одна из моих любимых остановок и свиньи тоже.",
+  "Beautiful country you have here. One of my favorite stops. The pig likes it, too.": "Красива у вас тут. Одна из моих любимых остановок. И свиньи тоже.",
   "Animal supplies for sale!": "Распродажа принадлежностей для животных!",
-  "*sigh*... When the door opened I thought it might be Lewis.": "* Вздыхают * ... Когда дверь открылась, я подумал, что это Льюис.",
-  "What'll you have?": "Что ты будешь есть?",
+  "*sigh*... When the door opened I thought it might be Lewis.": "*вздыхает* ... Когда дверь открылась, я подумал, что это Льюис.",
+  "What'll you have?": "Что закажешь?",
   "Can you smell that? It's the @key": "Чувствуешь запах ? Это @key",
   "Hungry? Thirsty? I've got just the thing.": "Голод? Жажда? У меня есть как раз то что нужно.",
   "Welcome to the Stardrop Saloon! What can I get ya?": "Добро пожаловать в бар Стардроп! Что я могу сделать для тебя?",
@@ -336,8 +336,8 @@
   "Welcome to the adventurer's guild.": "Добро пожаловать в гильдию искателей приключений.",
   "Slay any monsters? I'll buy the loot.": "Убиваешь любых монстров? Я куплю добычу.",
   "The caves can be dangerous. How do you think I lost this eye?": "Пещеры могут быть опасны. Как я потерял глаз по твоему?",
-  "You won't find these goods anywhere else!": "Ты не найдете эти товары больше нигде!",
-  "I've got just what you need.": "У меня есть то, что тебе нужно: ",
+  "You won't find these goods anywhere else!": "Ты не найдёшь эти товары нигде больше!",
+  "I've got just what you need.": "У меня есть то, что тебе нужно.",
   "Out of stock": "Нет в наличие",
   "Dwarvish Translation Guide": "Руководство по переводу Гномьего языка",
   "Rusty Key": "Ржавый ключ",
@@ -358,20 +358,20 @@
   "@number Fishing": "@number Рыболовство",
   "@number Combat": "@number Бой",
   "Wallet": "Бумажник",
-  "HA! Now that's what I like to see! Here, have a star token.": "АГА! Это то, что я хотел увидеть! Здесь есть звездный жетон.",
+  "HA! Now that's what I like to see! Here, have a star token.": "АГА! Это то, что я хотел увидеть! Здесь есть звёздный жетон.",
   "Strength Level: @key": "Уровень силы: @key",
-  "Wow. Zero strength. I'm actually impressed with how weak you are. Here's a star token.": "Вау. Сила на нуле. Я впечатлен твоей слабостью. Вот, держи звёздный жетон.",
+  "Wow. Zero strength. I'm actually impressed with how weak you are. Here's a star token.": "Вау. Сила на нуле. Я впечатлён твоей слабостью. Вот, держи звёздный жетон.",
   "You've started the game 100 times.": "Вы играете уже в 100-ый раз.",
-  "You've started the game 1000 times!": "Вы играете уже в 1000-ый раз.",
-  "You've started the game 10,000 times! I'm impressed. -Ape": "Вы играете уже в 10,000-ый раз. Я впечатлен. -Ape",
+  "You've started the game 1000 times!": "Вы играете уже в 1000-ый раз!",
+  "You've started the game 10,000 times! I'm impressed. -Ape": "Вы играете уже в 10,000-ый раз! Я впечатлён. -Эйп",
   "Welcome back!": "С возвращением!",
   "Plug in an Xbox One or Xbox 360 controller to activate game pad mode.": "Подключите контроллер Xbox One или Xbox 360 чтобы активировать режим геймпада.",
-  "Tip: Giving gifts is a good way to make friends with the residents of Stardew Valley.": "Подсказка: Дарите подарки жителям Долины Стардью ,это хороший способ, чтобы подружиться с ними.",
+  "Tip: Giving gifts is a good way to make friends with the residents of Stardew Valley.": "Подсказка: Дарите подарки жителям Долины Стардью, это хороший способ, чтобы подружиться с ними.",
   "Tip: Shift-click to purchase 5 items at a time.": "Подсказка: Шифт+клик для покупки 5 вещей за раз.",
   "After upgrading your hoe or watering can, hold down the tool button to increase the area of effect!": "После улучшения мотыги или лейки, удерживая кнопку инструмента, чтобы увеличить область применения!",
   "Tip: Right-click to use a weapon's special move.": "Подсказка: Правый клик для специального удара оружием.",
   "Watch TV shows to learn useful tips, cooking recipes, and more!": "Смотрите шоу по ТВ, чтобы узнать полезные советы, новые рецепты, и многое другое!",
-  "The traveling merchant visits Stardew Valley once a week. She sells a wide variety of goods, often at exorbitant prices!": "Путешествующий торговец посещает Долину Стардью раз в неделю. Она продает широкий ассортимент товаров, часто по завышенным ценам!",
+  "The traveling merchant visits Stardew Valley once a week. She sells a wide variety of goods, often at exorbitant prices!": "Путешествующий торговец посещает Долину Стардью раз в неделю. Она продаёт широкий ассортимент товаров, часто по завышенным ценам!",
   "Thanks for playing!": "Спасибо за игру!",
   "Elliott's latest sentence:@newlineThe @key @key @key @key the other @key": "Последнее предложение Эллиотта: @newline @key @key @key @key и другой @key",
   "Elliott's latest sentence:@newlineThe @key @key @key @key the @key": "Последнее предложение Эллиотта: @newline @key @key @key @key и  @key",
@@ -390,10 +390,11 @@
   "(girlfriend)": "(девушка)",
   "(wife)": "(жена)",
   "(husband)": "(муж)",
-  "This change will not take effect until you restart the game": "Это изменеие вступит в силу только после перезагрузки игры",
+  "This change will not take effect until you restart the game": "Это изменение вступит в силу только после перезагрузки игры",
   "Exhausted": "Истощение",
   "Jukebox": "Музыкальный автомат",
   "- @key - @key": "- @key - @key",
   "Last Item Shipped": "Последний проданный предмет",
-  "New record!": "Новый рекорд!"
+  "New record!": "Новый рекорд!",
+  "v1.07": "v1.07+БЕТА перевода. Shift+Alt+L - отчет. Баги и отчеты высылайте на sdvtr<ya.ru"
 }
