--- a/MultiLanguage/languages/RU/dictionaries/_MiniGames.json
+++ b/MultiLanguage/languages/RU/dictionaries/_MiniGames.json
@@ -9,7 +9,7 @@
   "Hey! We did it!": "Йей! Получилось!",
   "Urghh...": "Пф-ф-ф...",
   "Nooo!": "Не-е-ет!",
-  "Hit": "Еще",
+  "Hit": "Ещё",
   "Stand": "Стоп",
   "Double Or Nothing": "Удвоение",
   "New Game": "Новая Игра",
@@ -25,7 +25,7 @@
   "No Winner": "Ничья",
   "Dealer's closer to 21": "Раздающий ближе к 21",
   "Closer to 21": "Ближе к 21",
-  "You finished the Scenario with @key '@key' rating.": "Ты закончил с  @key '@key' рейтингом.",
+  "You finished the Scenario with @key '@key' rating.": "Ты закончил с @key '@key' рейтингом.",
   "Time: @number": "Время: @number",
   "Score: @number": "Очки: @number",
   "Fish Caught: @number": "Поймано рыб: @number",
