--- a/MultiLanguage/languages/RU/dictionaries/_NPC.json
+++ b/MultiLanguage/languages/RU/dictionaries/_NPC.json
@@ -1,5 +1,5 @@
 {
-  "Be patient, I still have a lot of work to do.": "Потерпи, мне нужно проделать еще много работы.",
+  "Be patient, I still have a lot of work to do.": "Потерпи, мне нужно проделать ещё много работы.",
   "Umm... I don't think so.": "Эмм... Я так не думаю.",
   "Is this a joke? I don't get it.": "Это что шутка? Не понимаю такого юмора.",
   "...I don't really know you well enough...": "...Мы недостаточно хорошо знакомы...",
@@ -7,7 +7,7 @@
   "...I didn't know. Uh... Sorry. No.": "...Я не знаю. Э-э... Извини. Нет.",
   "Oh? ...Sorry... I'm not ready for that.": "Что? ...К сожалению... сейчас не подходящее время для этого.",
   "...!! I'll accept this. Thank you. I didn't know you felt the same.": "...!! Я согласен|согласна. Спасибо. Я не знал|знала, что ты чувствовал тоже что и я.^...!! Я согласен|согласна. Спасибо. Я не знал|знала, что ты чувствовала тоже что и я.",
-  "...You want to get more serious? I feel the same way. I'm kind of nervous. Aren't you?": "...Ты хочешь более серьезных отношений? Я чувствую тоже самое. Я немного нервничаю. А ты нет?",
+  "...You want to get more serious? I feel the same way. I'm kind of nervous. Aren't you?": "...Ты хочешь более серьёзных отношений? Я чувствую тоже самое. Я немного нервничаю. А ты нет?",
   "What? Didn't you just ask someone else to marry you? You're crazy!": "Что? Почему бы тебе не пойти и не спросить кого-нибудь другого выйти за тебя? Ты сумасшедший!^Что? Почему бы тебе не пойти и не спросить кого-нибудь другого жениться на тебе? Ты сумасшедшая!",
   "You just got engaged! What are you thinking?": "Ты же только что обручился! О чем ты думаешь?^Ты же только что обручилась! О чем ты думаешь?",
   "Um, aren't you already married?": "Эм, а ты разве уже не женат?^Эм, а ты разве не замужем?",
@@ -70,22 +70,22 @@
   "If you want to get on my @key's good side, give him '@key'. @key.": "Если хочешь получить хорошее расположение у моего @keyR, подари ему '@key'. @key.",
   "If you want to get on @key's good side, give her '@key'. @key.": "Если хочешь получить хорошее расположение у @keyR, подари ей '@key'. @key.",
   "If you want to get on my @key's good side, give her '@key'. @key.": "Если хочешь получить хорошее расположение у моей @keyR, подари ей '@key'. @key.",
-  "If you want to make friends with @key, you can't go wrong with '@key'. @key.": "Если ты хочешь подружиться с @keyT, ты не ошибешься если подаришь '@key'. @key.",
-  "If you want to make friends with my @key, you can't go wrong with '@key'. @key.": "Если ты хочешь подружиться с моей|моим @keyT, ты не ошибешься если подаришь '@key'. @key.",
+  "If you want to make friends with @key, you can't go wrong with '@key'. @key.": "Если ты хочешь подружиться с @keyT, ты не ошибёшься если подаришь '@key'. @key.",
+  "If you want to make friends with my @key, you can't go wrong with '@key'. @key.": "Если ты хочешь подружиться с моей|моим @keyT, ты не ошибёшься если подаришь '@key'. @key.",
   "It's his favorite": "Это его любимое",
   "It's her favorite": "Это её любимое",
   "He loves it": "Он любит это",
   "She loves it": "Она любит это",
   "He loves that stuff": "Он любит такие вещи",
   "She loves that stuff": "Она любит такие вещи",
-  "I gave it to him one year and he wouldn't stop talking about it": "Я в один год селал|сделала ему такой подарок и он говорил об этом не переставая",
-  "I gave it to her one year and she wouldn't stop talking about it": "Я в один год селал|сделала ей такой подарок и она говорил об этом не переставая",
+  "I gave it to him one year and he wouldn't stop talking about it": "Я в один год сделал|сделала ему такой подарок и он говорил об этом не переставая",
+  "I gave it to her one year and she wouldn't stop talking about it": "Я в один год сделал|сделала ей такой подарок и она говорила об этом не переставая",
   "It would make a great gift": "Получится отличный подарок",
   "You could really make him happy with that": "Ты действительно мог бы порадовать его этим.^Ты действительно могла бы порадовать его этим.",
   "You could really make her happy with that": "Ты действительно мог бы порадовать её этим.^Ты действительно могла бы порадовать её этим.",
   "Abigail loves '@key'. She keeps a box of it under her bed. Weird, huh?": "Эбигейл обожает '@key'. Она держит целую коробку у себя под кроватью. Странно, правда?",
   "@key loves '@key'! He told me.": "@key обожает '@key'! Он сказал мне.",
-  "@key loves '@key'! She told me.": "@key обожает '@key'! Она сказал мне.",
+  "@key loves '@key'! She told me.": "@key обожает '@key'! Она сказала мне.",
   "@key really hates '@key'! She told me.": "@key ненавидит '@key'! Она сама мне сказала.",
   "It's for members only, kid. Now Scram.": "Это только для членов, парень. Вали отсюда.^Это только для членов, малышка. Вали отсюда.",
   "You remembered my birthday? I'm impressed. Thanks.": "Ты помнишь мой день рождения? Я впечатлен|впечатлена. Спасибо.",
@@ -113,13 +113,13 @@
   "Don't you ever feel trapped?": "Ты когда-нибудь чувствовал себя как в ловушке?^Ты когда-нибудь чувствовала себя как в ловушке?",
   "*grumble*... chores...": "*ворчание*... хлопоты...",
   "Don't you have work to do?": "Тебе разве нечем заняться?",
-  "Nghh... what is it? I'm trying to sleep.": "Нгхх... ну что еще? Я вообще-то пытаюсь уснуть.",
+  "Nghh... what is it? I'm trying to sleep.": "Нгхх... ну что ещё? Я вообще-то пытаюсь уснуть.",
   "I just don't feel like getting up today.": "Мне просто не хочется вставать сегодня.",
   "*sigh*... I just want to stay in bed.": "*вздох*... я просто хочу остаться в постели.",
-  "Nnnghh... what is it? Make your own breakfast.": "Нгхх... ну что еще? Сделай себе завтрак сам.в",
+  "Nnnghh... what is it? Make your own breakfast.": "Нгхх... ну что ещё? Сделай себе завтрак сам.",
   "I had a bad dream, that's all.": "У меня был плохой сон, вот и все.",
   "I wonder how much the new baby will change things?": "Интересно, как сильно ребёнок всё изменит??",
-  "@key, I hope our adoption request gets approved. I want a baby.": "@key, надеюсь, что наш запрос на усыновление будет одобрен. Я хочу завести ребенка.",
+  "@key, I hope our adoption request gets approved. I want a baby.": "@key, надеюсь, что наш запрос на усыновление будет одобрен. Я хочу завести ребёнка.",
   "@key, I filed our adoption papers. Now all we can do is cross our fingers and wait.": "@key, я подал|подала наши бумаги на усыновление. Теперь, мы можем только скрестить пальцы и ждать.",
   "I'm pregnant... can't you make your own breakfast?": "Я беременна... ты не можешь сам сделать себе завтрак?",
   "Ugh... I feel a little nauseated this morning.": "Ох... Отвратное утро, мне все время подташнивает.",
@@ -130,13 +130,13 @@
   "Being a parent is annoying, sometimes...  I just don't feel like getting up.": "Быть родителем - раздражает, иногда... мне просто не хочется вставать.",
   "I need some alone time... Why don't you take care of the kids for a change?": "Мне нужно немного побыть одному|одной... почему бы тебе не позаботиться о детях для разнообразия?",
   "I was going to make you breakfast, but I changed my mind.": "Я хотел|хотела приготовить завтрак для тебя, но передумал|передумала.",
-  "Hi @key! I got up early and watered some crops for you. I hope it makes your job a little easier today.": "Проснувшись рано утром, я полил|полила некоторые растения для тебя. Надеюсь, это сделает твой день более легким.",
-  "I also filled @key's water bowl.": "А еще я наполнил|наполнила миску @keyR водой.",
-  "Good Morning, @key! I got up early and watered some crops for you. I hope it makes your job a little easier today.": "Доброе утро, @key! Проснувшись рано утром, я полил|полила некоторые растения для тебя. Надеюсь, это сделает твой день более легким.",
+  "Hi @key! I got up early and watered some crops for you. I hope it makes your job a little easier today.": "Проснувшись рано утром, я полил|полила некоторые растения для тебя. Надеюсь, это сделает твой день легче.",
+  "I also filled @key's water bowl.": "А ещё я наполнил|наполнила миску @keyR водой.",
+  "Good Morning, @key! I got up early and watered some crops for you. I hope it makes your job a little easier today.": "Доброе утро, @key! Проснувшись рано утром, я полил|полила некоторые растения для тебя. Надеюсь, это сделает твой день легче.",
   "I got up early to water some crops and they were already done! You've really got this place under control.": "Проснувшись рано утром, я хотел|хотела полить растения, но все уже было сделано! У тебя и правда все под контролем.",
   "I was going to water some crops this morning, but I couldn't find any! Are you even doing any work out here?": "Я хотел|хотела полить растения этим утром, но не смогла найти ни одного! Ты вообще занимаешься хоть чем-нибудь полезным здесь?",
-  "Hi @key! I got up early and fed all the farm animals. I hope that makes your job a little easier today.": "Привет, @key! Проснувшись рано утром, я покормил|покормила всех животных на ферме. Надеюсь, это сделает твой день более легким.",
-  "Good Morning, @key! I got up early and fed all the farm animals. I hope that makes your job a little easier today.": "Доброе утро, @key! Проснувшись рано утром, я покормил|покормила всех животных на ферме. Надеюсь, это сделает твой день более легким.",
+  "Hi @key! I got up early and fed all the farm animals. I hope that makes your job a little easier today.": "Привет, @key! Проснувшись рано утром, я покормил|покормила всех животных на ферме. Надеюсь, это сделает твой день легче.",
+  "Good Morning, @key! I got up early and fed all the farm animals. I hope that makes your job a little easier today.": "Доброе утро, @key! Проснувшись рано утром, я покормил|покормила всех животных на ферме. Надеюсь, это сделает твой день легче.",
   "Erm... @key? Why don't we have any farm animals?": "Эмм... @key? А почему мы до сих пор не завели никакого домашнего скота?",
   "Hi @key! @key": "Привет, @key! @key",
   "Good Morning, @key! @key": "Доброе утро, @key! @key",
@@ -150,5 +150,5 @@
   "*sigh*... sometimes I miss my old life.": "*вздох*... иногда я скучаю по своей прежней жизни.",
   "The weather's too gloomy to get out of bed.": "Погода слишком мрачная, чтобы выбираться из постели.",
   "You could have cleaned up in here a little while I was gone...": "Можешь немного убраться тут когда я уйду...",
-  "It's not very nice to have to wade through a bunch of junk after a hard day's work.": "Не очень приятно пробираться через кучу мусора после тяжелого рабочего дня."
+  "It's not very nice to have to wade through a bunch of junk after a hard day's work.": "Не очень приятно пробираться через кучу мусора после тяжёлого рабочего дня."
 }
