--- a/MultiLanguage/languages/RU/dictionaries/_Object.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Object.json
@@ -13,8 +13,8 @@
   "@number in.": "@number д.",
   "__comment AnimalHouse.cs": "__comment AnimalHouse.cs",
   "Remove the egg?": "Убрать яйцо?",
-  "A new baby chick hatched!": "Вылупился циплёнок!",
-  "A new chick hatched... It looks odd.": "Вылупился циплёнок... Выглядит странно.",
+  "A new baby chick hatched!": "Вылупился цыплёнок!",
+  "A new chick hatched... It looks odd.": "Вылупился цыплёнок... Выглядит странно.",
   "A new baby duckling hatched!": "Вылупился утёнок!",
   "A new baby ...lizard?... hatched.": "Вылупилась ...ящерка?...",
   "__comment BarnDweller.cs": "__comment BarnDweller.cs",
@@ -50,13 +50,13 @@
   "Gem (Any)": "Драгоценный камень (Любой)",
   "Greens (Any)": "Зелень (Любая)",
   "__comment Farm.cs": "__comment Farm.cs",
-  "You place the diamond on Grandpa's Shrine.": "Ты кладешь брилиант на Дедушкин Алтарь",
+  "You place the diamond on Grandpa's Shrine.": "Ты кладёшь брилиант на Дедушкин Алтарь",
   "There's a diamond-shaped slot in the shrine... was that always there?": "На Алтаре есть отверстие по форме напоминающее бриллиант... оно всегда было здесь?",
-  "A slime escaped during the night.": "Ночью убежал слизень",
-  "@number slimes escaped during the night.": "Ночью убежали @number слизня",
+  "A slime escaped during the night.": "Ночью убежал слизень.",
+  "@number slimes escaped during the night.": "Ночью убежали @number слизня.",
   "__comment FarmAnimal.cs": "__comment FarmAnimal.cs",
-  "@key still a little clumsy from being born. He's curious about her new world.": "@key еще немного неуклюжий после рождения. Ему все любопытно в этом новом мире.",
-  "@key still a little clumsy from being born. She's curious about her new world.": "@key еще немного неуклюжа после рождения. Ей все любопытно в этом новом мире.",
+  "@key still a little clumsy from being born. He's curious about her new world.": "@key ещё немного неуклюжий после рождения. Ему все любопытно в этом новом мире.",
+  "@key still a little clumsy from being born. She's curious about her new world.": "@key ещё немного неуклюжа после рождения. Ей все любопытно в этом новом мире.",
   "@key seems curious, but a little cautious. He's getting used to the new home.": "@key кажется любопытным, но немного осторожным. Он привыкает к своему новому дому.",
   "@key seems curious, but a little cautious. She's getting used to the new home.": "@key кажется любопытной, но немного осторожной. Она привыкает к своему новому дому.",
   "@key seems curious, but a little cautious. It's a strange new world.": "@key кажется любопытной, но немного осторожной. Это странный новый мир.",
@@ -113,8 +113,8 @@
   "__comment Item.cs": "__comment Item.cs",
   "Footwear": "Обувь",
   "__comment MultiplayerUtility.cs": "__comment MultiplayerUtility.cs",
-  "Your grange display has been judged. Return to Mayor Lewis for the result!": "Ваш фермерский стенд был оценен. Возвращайтесь к мэру Льюису за результатом!",
-  "Can't Build There": "Невозможно построить",
+  "Your grange display has been judged. Return to Mayor Lewis for the result!": "Ваш фермерский стенд был оценён. Возвращайтесь к мэру Льюису за результатом!",
+  "Can't Build There": "Здесь нельзя строить",
   "@key changed @key name to '@key'": "@key сменил @key имя на '@key'",
   "__comment Options.cs": "__comment Options.cs",
   "Zoom Level:": "Уровень приближения",
@@ -163,7 +163,7 @@
   "Loading Mines...": "Загрузка шахт...",
   "Performing Miscellaneous Tasks...": "Производим разные манипуляции...",
   "__comment Stats.cs": "__comment Stats.cs",
-  "Monster Slayer Goal Complete! See Gil for your reward.": "Цель \"Убийца Монтров\" достигнута! Спроси Гила о награде.",
+  "Monster Slayer Goal Complete! See Gil for your reward.": "Цель \"Убийца Монстров\" достигнута! Спроси Гила о награде.",
   "__comment Object.cs": "__comment Object.cs",
   "Can't be planted here.": "Не может быть посажено здесь",
   "Progress Mode": "Режим прохождения",
@@ -182,8 +182,8 @@
   "A female slime has hatched": "Вылупилась девочка слизень",
   "A recipe to make @key": "Рецепт изготовления @keyR",
   "@key Recipe": "Рецепт @keyR",
-  "Blueprints for crafting a @key": "Чертеж для крафта @keyR",
-  "Blueprints for crafting an @key": "Чертеж для крафта @keyR",
+  "Blueprints for crafting a @key": "Чертёж для крафта @keyR",
+  "Blueprints for crafting an @key": "Чертёж для крафта @keyR",
   "Gunther can tell you more about this if you donate it to the museum.": "Гюнтер может рассказать больше об этом, если вы пожертвуете это музею",
   "__comment Honey": "__comment Honey",
   "Wild Honey": "Мёд из диких цветов",
@@ -202,7 +202,7 @@
   "Blueberry Wine": "Черничное Вино",
   "Bok Choy Juice": "Сок из Китайской капусты",
   "Cactus Fruit Wine": "Кактусовое Вино",
-  "Cauliflower Juice": "Сок из Цветная капуста",
+  "Cauliflower Juice": "Сок из цветной капусты",
   "Cherry Wine": "Вишнёвое Вино",
   "Coconut Wine": "Кокосовое Вино",
   "Corn Juice": "Кукурузный Сок",
@@ -211,7 +211,7 @@
   "Eggplant Juice": "Баклажановый Сок",
   "Garlic Juice": "Чесночный Сок",
   "Grape Wine": "Виноградное Вино",
-  "Green Bean Juice": "Сок из Зеленого горошка",
+  "Green Bean Juice": "Сок из Зелёного горошка",
   "Hops Pale Ale": "Хмельное Светлое Пиво",
   "Hot Pepper Wine": "Вино из Горького перца",
   "Kale Juice": "Сок из Кале",
@@ -245,12 +245,12 @@
   "Cherry Jelly": "Вишнёвое Желе",
   "Coconut Jelly": "Кокосовое Желе",
   "Pickled Corn": "Маринованная Кукуруза",
-  "Cranberries Jelly": "Клюквеное Желе",
+  "Cranberries Jelly": "Клюквенное Желе",
   "Crystal Fruit Jelly": "Хрусталиксовое Желе",
   "Pickled Eggplant": "Маринованные Баклажаны",
   "Pickled Garlic": "Маринованный Чеснок",
   "Grape Jelly": "Виноградное Желе",
-  "Pickled Green Bean": "Маринованный Зеленый горошек",
+  "Pickled Green Bean": "Маринованный Зелёный горошек",
   "Hot Pepper Jelly": "Желе из Горького перца",
   "Pickled Kale": "Маринованный Кале",
   "Melon Jelly": "Дынное Желе",
@@ -299,22 +299,22 @@
   "__comment Tools/*.cs except FishingRod and MelleeWeapon": "__comment Tools/*.cs except FishingRod and MelleeWeapon",
   "Axe": "Топор",
   "Used to chop wood.": "Им можно рубить деревья",
-  "You're only allowed to chop trees on your farm... It's a town rule.": "Вам можно рубить дереьвя только на ферме... Это городское правило",
+  "You're only allowed to chop trees on your farm... It's a town rule.": "Вам можно рубить деревья только на ферме... Это городское правило",
   "Farmer's Catalogue": "Каталог фермера",
   "Use this to purchase buildings, animals, and more!": "Используйте, чтобы купить здания, животных и другое!",
   "Hoe": "Мотыга",
   "Used to dig and till soil.": "Используйте для копки грядок",
   "Lantern": "Фонарь",
-  "Lights up dark places.": "Освещает темные места",
+  "Lights up dark places.": "Освещает тёмные места",
   "Magnifying Glass": "Увеличительное стекло",
   "Use this on your animals to see how they're doing.": "Используйте на животных чтобы узнать о них больше",
   "Milk Pail": "Подойник",
-  "Gather milk from your animals.": "Используйте для дойки полока",
+  "Gather milk from your animals.": "Используйте для дойки молока",
   "@key doesn't produce milk.": "@key не производит молока",
   "@key is too young to produce milk.": "@key слишком молода чтобы давать молоко.",
   "@key has no milk right now.": "У @key сейчас нет молока",
   "Copper Pan": "Медный поддон",
-  "Use to gather ore from streams.": "Используй для добычи руды из водоемов",
+  "Use to gather ore from streams.": "Используй для добычи руды из водоёмов",
   "Pickaxe": "Кирка",
   "Used to break stones.": "Используй чтобы ломать камни",
   "Your pickaxe isn't strong enough to break this yet.": "Ваша кирка ещё не достаточно крепка, чтобы сломать это.",
@@ -325,7 +325,7 @@
   "Shears": "Ножницы",
   "Use this to collect wool from sheep": "Используйте чтобы собирать шерсть с овец",
   "@key doesn't produce wool.": "@key не производит шерсть.",
-  "@key is too young to be sheared.": "@key сликом молод для стрижки.",
+  "@key is too young to be sheared.": "@key слишком молод для стрижки.",
   "@key has no wool right now.": "У @key сейчас нет шерсти",
   "Slingshot": "Рогатка",
   "Master Slingshot": "Рогатка мастера",
@@ -337,10 +337,10 @@
   "A famous hero once owned this sword.": "Когда этим мечом владел известный герой.",
   "Holy Sword": "Священный меч",
   "A powerful relic infused with ancient energy.": "Мощный реликт наполненный древней энергией.",
-  "Dark Sword": "Темный меч",
+  "Dark Sword": "Тёмный меч",
   "A powerful relic infused with evil energy.": "Мощный реликт наполненный энергией зла.",
   "Galaxy Sword": "Галактический меч",
-  "The ultimate cosmic weapon.": "Непревзойденное космическое оружие",
+  "The ultimate cosmic weapon.": "Непревзойдённое космическое оружие",
   "Wand": "Палочка",
   "A beautiful old wand.": "Красивая старая палочка",
   "Watering Can": "Лейка",
@@ -349,18 +349,18 @@
   "__comment Buildings/ , Characters/": "__comment Buildings/ , Characters/",
   "Dismount before entering": "Снимите перед входом",
   "Pieces of Hay: @number/@number": "Кусков сена: @number/@number",
-  "Under construction.": "Идет постройка.",
+  "Under construction.": "Идёт постройка.",
   "Name Your Horse": "Назовите свою лошадь",
   "Grover": "Гровер",
   "Thank you!": "Спасибо!",
   "A gift!": "Подарок!",
   "__comment This line, you're male:": "__comment This line, you're male:",
-  "I think I'll write in my journal tonight...@newline@newline-@key @number-@newlineI've been spending a lot of time with @key lately...": "Гровер",
+  "I think I'll write in my journal tonight...@newline@newline-@key @number-@newlineI've been spending a lot of time with @key lately...": "Я думаю, что запишу это в свой журнал сегодня ночью... @newline@newline-@key @number-@newlineЯ провожу довольно много времени с @key в последнее время...",
   "__comment This line, you're female:": "__comment This line, you're female:",
-  "I think I'll write in my diary tonight...@newline@newline-@key @number-@newlineI've been spending a lot of time with @key lately...": "Гровер",
+  "I think I'll write in my diary tonight...@newline@newline-@key @number-@newlineI've been spending a lot of time with @key lately...": "Я думаю, что запишу это в свой журнал сегодня ночью... @newline@newline-@key @number-@newlineЯ провожу довольно много времени с @key в последнее время...",
   "...We're becoming good friends. I hope things stay that way.": "...Мы становимся хорошими друзьями, надеюсь так будет всегда.",
-  "...I like him more than just a friend.": "... я люблю его больше , чем просто друга.",
-  "...I like her more than just a friend.": "... я люблю его больше , чем просто друга.",
+  "...I like him more than just a friend.": "... я люблю его больше, чем просто друга.",
+  "...I like her more than just a friend.": "... я люблю его больше, чем просто друга.",
   "(Write Nothing)": "(Ничего не писать)",
   "@key@newline@newlineLevel @number": "@key@newline@newlineУровень @number",
   "Monster in a box!": "Монстр в коробке!",
@@ -386,24 +386,24 @@
   "Greetings! It is I, the queen of sauce... here to teach you a new mouth-watering recipe from my secret cookbook. This week's dish...": "Приветствую! С вами королева приправ! И я готова поделиться новым аппетитным рецептом из моей личной кулинарной книги. Блюдо этой недели...",
   "Ah... I sense that a new viewer has joined us. A young man from... Stardew Valley? Welcome, welcome!": "А-ха... Чувствую, к нам присоединился новый телезритель. Это юноша  из... Долины Стардью? Милости просим!",
   "Ah... I sense that a new viewer has joined us. A young lady from... Stardew Valley? Welcome, welcome!": "А-ха... Чувствую, к нам присоединился новый телезритель. Это девушка из... Долины Стардью? Милости просим!",
-  "Ah... yes, I can hear the spirits whispering something to me...": "Ах... да, я слышу шепот духов...",
+  "Ah... yes, I can hear the spirits whispering something to me...": "Ах... да, я слышу шёпот духов...",
   "Welcome back to 'Welwick's Oracle'... If you seek hidden knowledge of the future, well you've come to the right place.": "Добро пожаловать в 'Оракул Вельвика'... Если вы одержимы сокрытым познанием будущего, вы попали в нужное место.",
   "Hoo.. I see a glimmer within my scrying orb... A shard of knowledge from the future!": "Ооо .. Я вижу проблеск в шаре предсказаний... Осколок знания из будущего!",
-  "Welcome to Welwick's Oracle... the ONLY show where the voice of the spirits is channeled directly... to YOU.": "Добро пожаловать к оракулу Вильвик... Единственное шоу, где голос духов передается точно... ТЕБЕ.",
+  "Welcome to Welwick's Oracle... the ONLY show where the voice of the spirits is channeled directly... to YOU.": "Добро пожаловать к оракулу Вильвик... Единственное шоу, где голос духов передаётся точно... ТЕБЕ.",
   "Welcome to KOZU 5... your number one source for weather, news, and entertainment.^And now, the weather forecast for tomorrow...": "Приветствуем на канале KOZU 5... ваш главный источник прогнозов погоды, новостей и развлечений.^А сейчас, прогноз погоды на завтра...",
   "You already know how to cook @key.": "Вы уже умеете готовить @key.",
   "You learned how to cook '@key'!": "Вы научились готовить '@key'!",
   "It's going to be clear and sunny all day.": "Небо будет чистым, а день ясным и солнечным.",
   "It's going to be a beautiful, sunny day tomorrow!": "На завтра ожидается прекрасная солнечная погода!",
   "It's going to rain all day tomorrow.": "Завтра должен быть дождь.",
-  "Partially cloudy with a light breeze. Expect lots of pollen!": "Частичная облачность и легкий ветерок. Ожидается большое количество пыльцы!",
+  "Partially cloudy with a light breeze. Expect lots of pollen!": "Частичная облачность и лёгкий ветерок. Ожидается большое количество пыльцы!",
   "It's going to snow all day. Make sure you bundle up, folks!": "Надвигается снег. Одевайтесь теплее!",
-  "It's going to be cloudy, with gusts of wind throughout the day.": "Будет облачно, легкий ветер в течение дня.",
+  "It's going to be cloudy, with gusts of wind throughout the day.": "Будет облачно, лёгкий ветер в течение дня.",
   "Looks like a storm is approaching. Thunder and lightning is expected.": "Похоже надвигается шторм. Ожидаются гром и молнии.",
   "Um... that's odd. My information sheet just says 'null'. This is embarrassing...": "Эм... странно. В моей справке указано 'null'. Как неловко... ",
-  "It's going to be clear and sunny tomorrow... perfect weather for the @key! The event will take place in Pelican Town, starting between @key and @key. Don't be late!": "Завтра будет ясно и солнечно... идельная погода для @key! Событие будет проходить в Пеликан Тауне, Начало между @key и @key. Не опазыдывайте!",
-  "It's going to be clear and sunny tomorrow... perfect weather for the @key! The event will take place on the beach, starting between @key and @key. Don't be late!": "Завтра будет ясно и солнечно... идельная погода для @key! Событие будет проходить на пляже, Начало между @key и @key. Не опазыдывайте!",
-  "It's going to be clear and sunny tomorrow... perfect weather for the @key! The event will take place in the forest, starting between @key and @key. Don't be late!": "Завтра будет ясно и солнечно... идельная погода для @key! Событие будет проходить в лесу, Начало между @key и @key. Не опазыдывайте!",
+  "It's going to be clear and sunny tomorrow... perfect weather for the @key! The event will take place in Pelican Town, starting between @key and @key. Don't be late!": "Завтра будет ясно и солнечно... идеальная погода для @key! Событие будет проходить в Пеликан Тауне, Начало между @key и @key. Не опаздывайте!",
+  "It's going to be clear and sunny tomorrow... perfect weather for the @key! The event will take place on the beach, starting between @key and @key. Don't be late!": "Завтра будет ясно и солнечно... идеальная погода для @key! Событие будет проходить на пляже, Начало между @key и @key. Не опаздывайте!",
+  "It's going to be clear and sunny tomorrow... perfect weather for the @key! The event will take place in the forest, starting between @key and @key. Don't be late!": "Завтра будет ясно и солнечно... идеальная погода для @key! Событие будет проходить в лесу, Начало между @key и @key. Не опаздывайте!",
   "Expect a few inches of snow tomorrow.": "Ожидайте завтра несколько дюймов снега.",
   "Bundle up, folks. It's going to snow tomorrow!": "Одевайтесь теплее, друзья: завтра будет снегопад!",
   "The spirits feel neutral today. The day is in your hands.": "Духи чувствуют себя нейтрально. Все в ваших руках.",
