--- a/MultiLanguage/languages/RU/dictionaries/_TBinStrings.json
+++ b/MultiLanguage/languages/RU/dictionaries/_TBinStrings.json
@@ -16,7 +16,7 @@
   "Doesn't seem like Jas uses this much.": "Вряд ли Джес часто этим пользуется.",
   "Mmm.... microwave pizza.": "М-м-м... Пицца из микроволновки.",
   "Looks like someone was chopping vegetables but never finished.": "Кто-то шинковал овощи, но так и не закончил.",
-  "\"Why are you looking through my trash can?": "Зачем ты роешься в моём мусорнике?",
+  "\"Why are you looking through my trash can?": "Зачем ты роешься в моём мусорном ящике?",
   "Mostly empty pizza cartons.": "Одни коробки из-под пиццы.",
   "__comment ArchaeologyHouse.tbin": "__comment ArchaeologyHouse.tbin",
   "A History of The Gotoro Empire": "\"История Империи Готоро\"",
@@ -27,13 +27,13 @@
   "Star Atlas": "Карта звёздного неба",
   "It's ragged but still cute.": "Изношенный, но всё равно милый.",
   "The Friendly Little Slime": "\"Добрый маленький слизень\"",
-  "Let's visit the farm. The chickens go bock bock. The pigs go snort snort. The goats go mah mah.": "Заглянем на ферму: куры квокчут, свиньи хрюкают, козы мекают.",
+  "Let's visit the farm. The chickens go bock bock. The pigs go snort snort. The goats go mah mah.": "Заглянем на ферму: куры квохчут, свиньи хрюкают, козы мекают.",
   "The ducks go ack ack. The rabbits go sniff sniff. The cows go ooh ooh.": "Утки крякают, кролики фыркают, коровы мычат...",
   "__comment BathHouse_MensLocker.tbin": "__comment BathHouse_MensLocker.tbin",
   "This locker smells awful.": "Ну и вонь!",
   "Trying to shower with your clothes on?": "В одежде мыться собрались?",
   "You're too weak to lift it.": "Вам не хватает сил её поднять.",
-  "Alex's Locker... There's a bunch of pictures of bodybuilders taped inside the door.": "Шкафчик Алекса... Изнутри, вся дверь оклеена фотографиями качков.",
+  "Alex's Locker... There's a bunch of pictures of bodybuilders taped inside the door.": "Шкафчик Алекса... Изнутри, вся дверь оклеена фотографиями бодибилдеров.",
   "__comment BathHouse_WomensLocker.tbin": "__comment BathHouse_WomensLocker.tbin",
   "Items for women.": "Разные предметы женской гигиены.",
   "It's Penny's locker. There's a frilly bathing suit inside.": "Шкафчик Пенни. Внутри купальник с милыми оборками.",
@@ -51,7 +51,7 @@
   "There's a stack of metalworking blueprints.": "Различные металлургические рецепты.",
   "It's full of soot.": "Внутри полно кокса.",
   "__comment BusStop.tbin": "__comment BusStop.tbin",
-  "` Bus Stop^> Pelican Town": "` Остановка^> Пеликан Таун",
+  "` Bus Stop^> Pelican Town": "` Остановка^> Пеликан-Таун",
   "__comment Club.tbin": "__comment Club.tbin",
   "Welwick: It's not my lucky day. Ugh... I drank too much.": "Вилвик: Сегодня точно не мой день. Ой-ё... Зачем я так напилась?",
   "Man: Hey, can't you see I'm busy? I'm on a roll here.": "Мужчина: Отстань, я занят. Мне сегодня крупно везёт.",
@@ -59,22 +59,22 @@
   "It's a painting by Leah.": "Картина Лии.",
   "Elliott's work desk. It's covered in notes and crumpled papers.": "Письменный стол Элиота. На нём полно записок и скомканных листов.",
   "It's an empty cubby.": "Пустая каморка.",
-  "It looks like Elliott is trying to grow a bonsai tree. It looks cool so far!": "Элиот пробует выращивать бонсай. Неплохо выглядит!",
-  "It's a mini-palm, imported from Calico Desert.": "Мини-пальма, привезенная из пустыни Калико.",
+  "It looks like Elliott is trying to grow a bonsai tree. It looks cool so far!": "Похоже Эллиотт пробует выращивать дерево бонсай. Неплохо выглядит!",
+  "It's a mini-palm, imported from Calico Desert.": "Мини-пальма, привезённая из пустыни Калико.",
   "__comment Farm.tbin": "__comment Farm.tbin",
   "Grandpa's Shrine": "Дедушкино святилище",
   "Mailbox": "Почтовый ящик",
   "__comment FishShop.tbin": "__comment FishShop.tbin",
   "It leads up to a little sleeping cubby. It's off limits": "Она ведёт в каморку наверху. Там закрыто.",
   "It's a tackle box. It's full of lures, bobbers, hooks, and fishing line.": "Коробка со снастями. Заполнена приманками, поплавками, крючками и леской.",
-  "Miniature model of a frigate.": "Миниатюрная модель фригата.",
+  "Miniature model of a frigate.": "Миниатюрная модель фрегата.",
   "There's little pink shrimping moving around in there.": "Там маленькие розовые креветки.",
   "Well, it's a bin full of writhing, wriggling worms. It smells something awful.": "А это корзина с червями. Здорово воняет.",
   "Chum bucket.": "Ведро с подкормкой.",
   "Looks like frog eggs.": "Похоже, это лягушачьи яйца.",
   "__comment Forest.tbin": "__comment Forest.tbin",
-  "` Farm^> Pelican Town": "` Ферма^> Пеликан Таун",
-  "@ Cindersap Forest^> Pelican Town": "@ Янтарный лес^> Пеликан Таун",
+  "` Farm^> Pelican Town": "` Ферма^> Пеликан-Таун",
+  "@ Cindersap Forest^> Pelican Town": "@ Янтарный лес^> Пеликан-Таун",
   "__comment HaleyHouse.tbin": "__comment HaleyHouse.tbin",
   "HaleyHouse": "Дом Хейли",
   "It's locked.Su": "Закрыто.",
@@ -85,14 +85,14 @@
   "There's a little note on the pot. 'Something to remember me by. -Sandy'": "На горшочке небольшая надпись: \"На память от Сэнди\".",
   "It's a bolt of blue cloth. There's pieces cut out of it, and little embroidered patterns along the fringe.": "Свёрток синей ткани. Часть отрезана, а другая отделана кружевом.",
   "It's Emily's computer. It's password-protected so you can't snoop around on it.": "Компьютер Эмили. Он под паролем и вам туда не проникнуть.",
-  "'Found Fashions: Photos From The Streets Of Zuzu City'": "\"Стильные штучки: фотографии с улиц Зузу-сити\"",
+  "'Found Fashions: Photos From The Streets Of Zuzu City'": "\"Стильные штучки: фотографии с улиц Зузу-Сити\"",
   "It's a deluxe vanity. There's all kinds of creams, paints, and powders dotting the surface.": "Роскошный туалетный столик. Он весь заставлен кремами, красками, пудрами, духами и тому подобным.",
   "It's Haley's camera.": "Фотоаппарат Хейли",
   "'Flailing With Purpose: A Modern Approach To The Art Of Dance'": "\"Осмысленные па: современный подход к искусству танца\"",
   "'Build Your Own Darkroom From Scratch'": "\"Фотолаборатория на дому\"",
   "It's a globe. Hey, there's Stardew Valley!": "Глобус. Эй, да тут есть долина Стардью!",
   "The oven smells sweet like fresh cupcakes.": "Из духовки сладко пахнет горячими кексами.",
-  "Cupcakes, milk, a tightly sealed jar of cornichons, and quinoa salad.": "Кексы, молоко, плотно закрытая банка с корнишонами и салат из кинвы.",
+  "Cupcakes, milk, a tightly sealed jar of cornichons, and quinoa salad.": "Кексы, молоко, плотно закрытая банка с корнишонами и салат из киноа.",
   "To our beloved girls:^We miss you and hope that you are doing okay on your own. We just left the Fern Islands last night, after staying for two months.^It was a wonderful experience... highly recommended.^Make sure you eat healthy and don't forget to pay the electricity bill!^^Love, Mom & Dad": "Милые наши девочки:^Мы очень соскучились и надеемся, что у вас всё хорошо. Мы два месяца отдыхали на Папоротниковых островах, вернулись только прошлой ночью.^Масса впечатлений... Вам определённо стоит там побывать!^Не забывайте правильно питаться и оплачивать электричество!^^С любовью, мама и папа",
   "'Super Fashion Girl' magazine": "Журнал \"Стильная модница\"",
   "__comment HarveyRoom.tbin": "__comment HarveyRoom.tbin",
@@ -106,7 +106,7 @@
   "You didn't find anything, and now your hands smell bad.": "Вы ничего не нашли, зато руки теперь воняют.",
   "It looks well used.": "Поношенное.",
   "It's full of convenience food.": "Полон здоровой пищи.",
-  "Ground-To-Air Radio Protocol": "Протокол радиосвязи \"Земля-воздух\"",
+  "Ground-To-Air Radio Protocol": "Протокол радиосвязи \"земля-воздух\"",
   "It's a pretty standard TV set. It's set to the history station.": "Самый обычный телевизор. Настроен на канал \"История\".",
   "__comment Hospital.tbin": "__comment Hospital.tbin",
   "The sign of the vessel. It's here to comfort those who believe in Yoba.": "Знак ковчега. Чтобы утешить тех, кто верит в Йобу.",
@@ -120,7 +120,7 @@
   "Hoisin sauce": "Соус Хойсин",
   "'Maple Sauce'... It's a lot like syrup!": "\"Кленовый соус\"... Почти как сироп!",
   "Sugar-free marshmallows": "Зефир без сахара",
-  "Taco sauce for babies": "Соус тако для детей",
+  "Taco sauce for babies": "Соус \"Тако\" для детей",
   "Salt": "Соль",
   "Protein bars": "Протеиновый батончик",
   "Sugar-Free Lollipop": "Леденец без сахара",
@@ -129,14 +129,14 @@
   "Hair Gel -- Electric Blue": "Электрический синий -- Гель для волос",
   "Granny's sauce": "Бабушкин соус",
   "Canned soup": "Консервированный суп",
-  "Double Butter Ranch Chips": "Экстра-жирные фермерские чипсы",
+  "Double Butter Ranch Chips": "Экстражирные фермерские чипсы",
   "JojaCo Multipurpose sauce": "Универсальный соус JojaCo",
   "Pretzel snacks": "Солёная соломка",
   "JojaDiet -- Low fat beans! In a sweet sugar-sauce": "Joja-диета  -- Обезжиренная фасоль в сладком сиропе!",
   "Protein shakes": "Протеиновый коктейль",
   "11-grain bread": "Хлеб из 11 злаков",
   "Grade D Cooking Oil": "Растительное масло. Сорт 3.",
-  "Hair Gel -- X-treme hold": "Экстра-стойкий гель для волос",
+  "Hair Gel -- X-treme hold": "Экстремально стойкий гель для волос",
   "Very Mild Sauce": "Очень нежный соус",
   "Take-home churro kit": "Упаковка домашних пончиков",
   "White bread, fortified with essential nutrients": "Белый хлеб с витаминами и микроэлементами",
@@ -153,13 +153,13 @@
   "Cinnamon sugar chips": "Чипсы с корицей и сахаром",
   "Pesto": "Соус \"Песто\"",
   "Yeast": "Дрожжи",
-  "Protein powder": "Белковый порошок ",
+  "Protein powder": "Белковый порошок",
   "Cocoa Zeppelins": "Шоколадные цеппелины",
   "Oat bread": "Овсяный хлеб",
   "Synthetic Butter -- It's cheap!": "Синтетическое масло -- Дёшево!",
   "Mouthwash": "Ополаскиватель для рта",
   "Take-Me-To-The-Emergency-Room sauce": "Соус \"Реаниматор\" - взбодрит и мёртвого!",
-  "Dehydrated shrimp snack.": "Закуска из сушеных креветок",
+  "Dehydrated shrimp snack.": "Закуска из сушёных креветок",
   "Sugar cane chips": "Чипсы из сахарного тростника",
   "Sugar cones": "Сахарные головы",
   "Powdered breakfast -- Just add water. (Eggs & Potatoes)": "Сухой завтрак - просто добавь воды! (Картошка с яйцами)",
@@ -186,8 +186,8 @@
   "Blue Alien ENERGY... Get LAUNCHED": "Синяя энергия чужих: ЗАРЯЖАЙСЯ!",
   "Grape Nibble-Pebbles": "Виноградные \"Морские камешки\"",
   "Sourdough bread": "Хлеб на закваске",
-  "Joja Oil -- A proprietary blend of delicious oils. Use it for any purpose.": "Joja-масло -- патентованный купаж лучших растительных масел. Подходит для любых блюд. ",
-  "Joja Multipurpose Detergent -- Use it for your laundry, for your dishes, to clean your hands, as a shampoo, and even as toothpaste! Mix it with JojaMeal to make a delicious icing.": "Многоцелевое моющее средство Joja -- Им можно стирать бельё, мыть посуду, руки, волосы и даже чистить зубы! А если смешать его с Joja-мукой - получится вкуснейшая глазурь. ",
+  "Joja Oil -- A proprietary blend of delicious oils. Use it for any purpose.": "Joja-масло -- патентованный купаж лучших растительных масел. Подходит для любых блюд.",
+  "Joja Multipurpose Detergent -- Use it for your laundry, for your dishes, to clean your hands, as a shampoo, and even as toothpaste! Mix it with JojaMeal to make a delicious icing.": "Многоцелевое моющее средство Joja -- Им можно стирать бельё, мыть посуду, руки, волосы и даже чистить зубы! А если смешать его с Joja-мукой - получится вкуснейшая глазурь.",
   "Inferno Sauce": "Адский соус",
   "Disks and pucks of pure gluten.": "Бублики и коржики из чистого глютена",
   "Fruit snacks": "Фруктовые печеньки",
@@ -199,7 +199,7 @@
   "Laundry Detergent -- now with 10x the fragrance!": "Стиральный порошок -- теперь в 10 раз ароматнее!",
   "Fire Sauce": "Пламенный соус",
   "JojaMeal... It's like corn meal but more versatile. It can be used for baking, thickening and sweetening. Mix it with water to make our signature gravy.": "Joja-мука - похожа на кукурузную, но более универсальна. Подходит для выпечки, кляров и соусов. Добавьте в неё воды и получите нашу фирменную подливку!",
-  "Carbo cones. Tasty little cone-shaped snacks that will fill your stomach bag.": "Углеводные колпачки. Вкусные печенья-колпачки быстро уталят ваш голод.",
+  "Carbo cones. Tasty little cone-shaped snacks that will fill your stomach bag.": "Углеводные колпачки. Вкусные печенья-колпачки быстро утолят ваш голод.",
   "Cowboy sauce": "Ковбойский соус",
   "Vacuum-sealed marinated mushrooms": "Маринованные грибы в вакуумной упаковке",
   "Canned meals": "Консервированные обеды",
@@ -212,7 +212,7 @@
   "Pasta in a can.": "Консервированные спагетти",
   "Corn flour.": "Кукурузная мука",
   "__comment JoshHouse.tbin": "__comment JoshHouse.tbin",
-  "Momma-^If you're reading this, it means I've passed on. I'm so sorry you had to go through this. Know that I love you both.^Don't be too upset, I'm with Yoba now. ^My final request: take care of Alex. He needs a family, something stable. He's a good kid.^ Love, ^Clara": "Мама-^Если ты это читаешь, значит меня больше нет. Прости, что заставила тебя такое пережить. Просто знай: я очень люблю вас обоих.^И постарайся сильно не расстраиваться - Йоба обо мне позаботится. ^Моя последняя воля: воспитай Алекса. Ему нужна семья, основа. Он хороший мальчик.^ С любовью, ^Клара",
+  "Momma-^If you're reading this, it means I've passed on. I'm so sorry you had to go through this. Know that I love you both.^Don't be too upset, I'm with Yoba now. ^My final request: take care of Alex. He needs a family, something stable. He's a good kid.^ Love, ^Clara": "Мама -^Если ты это читаешь, значит меня больше нет. Прости, что заставила тебя такое пережить. Просто знай: я очень люблю вас обоих.^И постарайся сильно не расстраиваться - Йоба обо мне позаботится.^Моя последняя воля: воспитай Алекса. Ему нужна семья, основа. Он хороший мальчик.^С любовью, ^Клара",
   "The radio is set to the oldies station.": "Радио настроено на станцию ретро-музыки.",
   "'Pro Gridball Season 44: Stats and Standings'": "\"Гридбол - 44-й сезон: Турнирные таблицы и статистика\"",
   "'Dealing With Loss'": "\"Как смириться с утратой\"",
@@ -236,9 +236,9 @@
   "No Messages.": "Сообщений нет.",
   "__comment ManorHouse.tbin": "__comment ManorHouse.tbin",
   "Mayor's oven could use a good cleaning.": "Духовку мэра давно пора помыть.",
-  "It's a ledger full of pelican town data. You can't really understand it.": "Бухгалтерская книга Пеликан-тауна. Вы ни слова в ней не понимаете.",
+  "It's a ledger full of pelican town data. You can't really understand it.": "Бухгалтерская книга Пеликан-Тауна. Вы ни слова в ней не понимаете.",
   "A traditional tea setting. The mayor must be pretty serious about tea.": "Набор для традиционной чайной церемонии. Похоже, мэр серьёзно относится к чаепитию.",
-  "Won't you come by tomorrow night?^If you come through the back window no one will notice.^I'd like to see you more often.^I know you're busy but can't you make time for me?^I hope to see you tomorrow.^-M": "Заглянешь завтра ночью?^Если зайдёшь через заднее окно - тебя никто не заметит.^Я хочу почаще с тобой видиться.^Знаю, ты очень занят, но может выделишь мне пару часиков?^Жду тебя завтра.^-М",
+  "Won't you come by tomorrow night?^If you come through the back window no one will notice.^I'd like to see you more often.^I know you're busy but can't you make time for me?^I hope to see you tomorrow.^-M": "Заглянешь завтра ночью?^Если зайдёшь через заднее окно - тебя никто не заметит.^Я хочу почаще с тобой видеться.^Знаю, ты очень занят, но может выделишь мне пару часиков?^Жду тебя завтра.^-М",
   "__comment Mountain.tbin": "__comment Mountain.tbin",
   "` Railroad": "` Железная дорога",
   "__comment Saloon.tbin": "__comment Saloon.tbin",
@@ -249,7 +249,7 @@
   "Jodi-^Since I'll be coming home soon I want to tell you a few things.^I might not be the same man you remember. I've seen some things out here that have really shaken me up. I've been having a real hard time relaxing.^I don't want to scare you or make you upset. I just don't want you to be shocked when I get back.^Remember, no matter how I act, you and the kids mean everything to me.^I'll see you soon.^-Kent": "Джоди-^Уже скоро я вернусь домой и хочу тебе кое-что сказать.^Я теперь не совсем тот мужчина, которого ты знала. То, что довелось здесь увидеть, сильно меня потрясло. И пройдёт немало времени, пока я снова привыкну к мирной жизни.^Только не пугайся и не расстраивайся - я просто не хочу тебя шокировать, когда приеду.^Главное, помни: ты и дети для меня всегда на первом месте.^До встречи.^-Кент",
   "It's set to the news station.": "Настроен на канал новостей.",
   "Guitar picks and skateboard wheels.": "Медиаторы и колёса от скейта.",
-  "There's a bunch of extra strong hair gel in here.": "Куча баночек с экстра-сильным гелем.",
+  "There's a bunch of extra strong hair gel in here.": "Куча баночек с экстра сильным гелем.",
   "Hey, don't look in there!": "Эй, не лазь туда!",
   "Looks like Sam cleans his trash bin regularly.": "Похоже, Сэм регулярно выносит мусор.",
   "There's a bunch of skateboarding magazines.": "Стопка журналов по скейтбордингу.",
@@ -261,9 +261,9 @@
   "__comment ScienceHouse.tbin": "__comment ScienceHouse.tbin",
   "Space poster": "Плакат о космосе",
   "It looks like a prototype for one of Maru's inventions.": "Видимо, это прототип какого-то изобретения Мару.",
-  "For a gadgeteer, Maru's computer is pretty old. She's still backing up her files to floppy disk.": "У Мару довольно древний компьютер, как для железячницы. Она до сих пор хранит файлы на дискетах!",
+  "For a gadgeteer, Maru's computer is pretty old. She's still backing up her files to floppy disk.": "У Мару довольно древний компьютер, как для помешенной на гаджетах. Она до сих пор хранит файлы на дискетах!",
   "'Maximizing Your Second Marriage' and 'Practical Tips For First-Time Step-Dads'": "\"Как получить максимум от второго брака\" и \"Практические советы отчиму\"",
-  "There's a bunch of carpentry magazines.": "Стопка журналов по столярству.",
+  "There's a bunch of carpentry magazines.": "Стопка журналов по плотничному мастерству.",
   "'Advanced Neural Networks'": "\"Высшие нейросети\"",
   "It's locked.": "Заперто.",
   "It's some kind of device Maru's working on. It looks pretty scrappy.": "Устройство, которое сейчас собирает Мару. Больше похоже на кучу запчастей.",
@@ -301,7 +301,7 @@
   "\"Our Beloved Mona\"": "\"Наша любимая Мона\"",
   "Archaeology Office - Open 8:00 AM to 6:00 PM": "Музей археологии - Открыт с 8-00 до 18-00",
   "__comment Town-Fair.tbin": "__comment Town-Fair.tbin",
-  "Tourist: Man... I can't take another bite of this barbecue sandwich... so stuffed.": "Турист: Слушай... я уже даже укусить этот барбекю-сэндвич не могу... так наелся.",
+  "Tourist: Man... I can't take another bite of this barbecue sandwich... so stuffed.": "Турист: Слушай... я уже даже укусить этот барбекю сэндвич не могу... так наелся.",
   "Are you strong like me? Smash stone!": "Твоя сила сравнится с моей? Разбей камень!",
   "Tourist: Wow. That's the biggest cheese wheel I've ever seen. Very impressive.": "Турист: Ничего себе! В жизни не видела такой огромной головки сыра. Вот это да!",
   "Tourist: It was a long bus ride here, but totally worth it! This valley is so beautiful. Simon loves it... don't you, Simon?": "Турист: Мы так долго ехали сюда на автобусе, но это точно того стоило! Долина такая красивая. Саймону тут нравится... Да, Саймон?",
