--- a/MultiLanguage/languages/RU/dictionaries/_Utility.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Utility.json
@@ -1,9 +1,9 @@
 {
   "__comment": "Utility.cs",
-  "Flooring applied": "Пол применен",
+  "Flooring applied": "Пол применён",
   "Wallpaper applied": "Обои применены",
   "he's worked hard on his farm,": "он усердно работал на своей ферме,",
-  "made significant contributions to the field of archaeology,": "внес значительный вклад в археологию,",
+  "made significant contributions to the field of archaeology,": "внёс значительный вклад в археологию,",
   "has been a big help around town,": "оказал помощь всему городу,",
   "has come to be loved by many residents,": "полюбился многим жителям,",
   "has become a local fishing legend,": "стал местной рыболовной легендой,",
@@ -34,7 +34,7 @@
   "__comment": "This is final credits of game\"",
   "Credits:@newline @newline@newline@newlineProgramming,@newlineArt, Music,@newlineSound Effects, Writing:@newline@newline-Eric Barone@newline@newline@newline@newlineSpecial Thanks:@newline@newline-Amber Hageman@newline-Shane Waletzko@newline-Fiddy, Nuns, Kappy &@newlineeveryone from HarvestCraft@newline-Trader Joe's Organic Hummus@newline@newline@newline@newlineThanks for playing! :)": "Титры:@newline @newline@newline@newlineПрограммирование,@newlineДизайн, Музыка,@newlineЗвуковые эффекты, Сценарий:@newline@newline-Eric Barone@newline@newline@newline@newlineОтдельное спасибо:@newline@newline-Amber Hageman@newline-Shane Waletzko@newline-Fiddy, Nuns, Kappy &@newlineвсем из HarvestCraft@newline-Trader Joe's Organic Hummus@newline@newline@newline@newlineСпасибо, что играли! :)",
   "First Night": "Первая ночь",
-  "The pages are too faded to read": "Страницы слишком нечеткие",
+  "The pages are too faded to read": "Страницы слишком нечёткие, что-бы их прочесть",
   "Requires construction of a Coop": "Требуется птичник",
   "Requires construction of a Barn": "Требуется хлев",
   "Requires construction of a Big Barn": "Требуется большой хлев",
@@ -116,16 +116,16 @@
   "Calico Desert": "Calico Desert",
   "Joja Office Ambience": "Joja Office Ambience",
   "__comment": "getWeddingEvent",
-  "When @player first arrived in Pelican Town, no one knew if he'd fit in with our community...": "Когда @player впервые прибыл в Пеликан-таун, никто не знал, сможет ли он вписаться в наше сообщество...",
+  "When @player first arrived in Pelican Town, no one knew if he'd fit in with our community...": "Когда @player впервые прибыл в Пеликан-Таун, никто не знал, сможет ли он вписаться в наше сообщество...",
   "But from this day forward, @player is going to be as much a part of this town as any of us!": "Но с этого дня, @player будет такой же частью этого города, как любой из нас!",
   "It is my great honor on this day @number of @key, to unite @player and @key in the bonds of marriage.": "Для меня большая честь в этот день @number @key, связать @player и @key узами брака.",
-  "When @player first arrived in Pelican Town, no one knew if she'd fit in with our community...": "Когда @player впервые прибыла в Пеликан-таун, никто не знал, сможет ли она вписаться в наше сообщество...",
+  "When @player first arrived in Pelican Town, no one knew if she'd fit in with our community...": "Когда @player впервые прибыла в Пеликан-Таун, никто не знал, сможет ли она вписаться в наше сообщество...",
   "Well, let's get right to it!": "Ну, давайте сразу к делу!",
   "@player... @key...": "@player... @key...",
   "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you husband and wife!": "Как мэр Пеликан-тауна и местный хранитель брачной печати - объявляю вас мужем и женой!",
-  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you husband and ..., well, husband!": "Как мэр Пеликан-тауна и местный хранитель брачной печати - объявляю вас мужем и... кхм... мужем!",
-  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you wife and husband!": "Как мэр Пеликан-тауна и местный хранитель брачной печати - объявляю вас женой и мужем!",
-  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you wife and ..., well, wife!": "Как мэр Пеликан-тауна и местный хранитель брачной печати - объявляю вас женой и... кхм... женой!",
+  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you husband and ..., well, husband!": "Как мэр Пеликан-Тауна и местный хранитель брачной печати - объявляю вас мужем и... кхм... мужем!",
+  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you wife and husband!": "Как мэр Пеликан-Тауна и местный хранитель брачной печати - объявляю вас женой и мужем!",
+  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you wife and ..., well, wife!": "Как мэр Пеликан-Тауна и местный хранитель брачной печати - объявляю вас женой и... кхм... женой!",
   "You may kiss.": "Можете поцеловать друг друга.",
   "Life is going to be different from now on...": "С этого момента ваша жизнь сильно измениться...",
   "...But the future looks bright!": "...Но, несомненно, в лучшую сторону!",
@@ -134,16 +134,16 @@
   "Sorry, @player...": "Прости, @player...",
   "Maybe in 'another life' you'll win...": "Может быть в \"другой жизни\" выиграешь...",
   "@key won? I'm still shocked...": "@key выиграл? Я в шоке...",
-  "Ugh... how in the world did @key win? That's awful.": "Тьфу.. как вообще @key мог победить? Это ужасно.^Тьфу.. как вообще @key могла победить? Это ужасно.",
+  "Ugh... how in the world did @key win? That's awful.": "Тьфу... как вообще @key мог победить? Это ужасно.^Тьфу... как вообще @key могла победить? Это ужасно.",
   "Hmmph. They'd never give that award to an old timer like me.": "Хмпф. Старикам награды не полагаются, конечно.",
-  "Congratulations, @player! I knew you'd win.": "Поздравляю,  @player! Я знала, что ты победишь.",
-  "We all knew you were going to win, @player. @key was kind of a jerk.": "Мы все знали, что ты выиграешь, @player.  @key был придурком.",
+  "Congratulations, @player! I knew you'd win.": "Поздравляю, @player! Я знала, что ты победишь.",
+  "We all knew you were going to win, @player. @key was kind of a jerk.": "Мы все знали, что ты выиграешь, @player. @key был придурком.",
   "Stardew Hero... I'm impressed!": "Герой Стардью... Вот это да!",
   "It's such a great honor you received, @player! But you earned it.": "Тебе оказали огромную честь, @player! Но ты заслужил.^Тебе оказали огромную честь, @player! Но ты заслужила.",
   "I'm so glad @key didn't win.": "Я так рада, что @key не выиграл.^Я так рада, что @key не выиграла.",
-  "You did it, @player!": "У тебя вышло, @player!\n",
+  "You did it, @player!": "У тебя вышло, @player!",
   "Good job, dude.": "Хорошая работа, дружище.",
-  "Good job, @player.": "Хорошая работа, player.",
+  "Good job, @player.": "Хорошая работа, @player.",
   "__comment": "getStardewHeroCelebrationEventString",
   "__comment": "Lewis says",
   "Welcome, everyone, to the 16th Centennial Stardew Hero Celebration!": "Добро пожаловать на 16-ю церемонию присвоения звания \"Героя долины Стардью\", которая проходит раз в сто лет!",
@@ -153,22 +153,22 @@
   "...And standing before you today are the two top contenders. @player and @key.": "... И сегодня перед вами стоят два главных соперника. @player и @key.",
   "@player moved here 2 years ago, and in that time  he's worked hard on his farm,  and has earned over @numberg in revenue.": "@player приехал сюда два года назад и очень тяжело трудился на своей ферме, при этом он заработал @numberg.^@player приехала сюда два года назад и очень тяжело трудилась на своей ферме, при этом она заработала @numberg.",
   "...Those kinds of accomplishments could breathe life into any community!": "...Такие достижения способны вдохнуть жизнь в любое сообщество!",
-  "@key also moved here 2 years ago. In that time he's created one of the most productive farms I've ever seen!": "@key также переехал сюда 2 года назад. За это время он создал одну из самых продуктивных ферм, которые когда-либо я  видел!",
+  "@key also moved here 2 years ago. In that time he's created one of the most productive farms I've ever seen!": "@key также переехал сюда 2 года назад. За это время он создал одну из самых продуктивных ферм, которые я когда-либо видел!",
   "@key also moved here 2 years ago. In that time she's created one of the most productive farms I've ever seen!": "@key также переехала сюда 2 года назад. За это время она создала одну из самых продуктивных ферм, которые я когда-либо видел!",
-  "...And funneled a large sum into my personal bank acc... er, I mean campaign fund!": "... И огромная сумма поступает на мой личный банковский счет... То есть, я хотел сказать в избирательный фонд!",
+  "...And funneled a large sum into my personal bank acc... er, I mean campaign fund!": "...И огромная сумма поступает на мой личный банковский счёт... То есть, я хотел сказать в избирательный фонд!",
   "__comment": "rival says",
   "Thank you, Mayor, sir!": "Спасибо вам, господин мэр!",
   "I would like to to say how much of a *blessing* it's been to meet all of you wonderful people! I'm so happy to know how important I am in making this community great.": "Я хотел бы сказать, что очень *счастлив* познакомится с такими замечательными людьми, как вы! Я очень рад тому, что могу сделать сообщество лучше.^Я хотела бы сказать, что очень *счастлива* познакомится с такими замечательными людьми, как вы! Я очень рада тому, что могу сделать сообщество лучше.",
   "Unfortunately, @player was so jealous of me that he did everything possible to drag me down!": "К сожалению, @player завидует мне и сделает всё, чтобы унизить меня!",
   "But, against all odds, I've single-handedly transformed this valley into a new paradise, and touched your hearts in a way you'll never forget. *sniff*": "Но, несмотря на все трудности, я смогу в одиночку превратить эту долину в новое райское место, тронув ваши сердца, как никто прежде. *Шмыгает носом*",
-  "...Without further ado, ladies and gentleman...": "..Без лишних слов, дамы и господа...",
+  "...Without further ado, ladies and gentleman...": "...Без лишних слов, дамы и господа...",
   "The next Stardew Hero will be...": "Новым Героем Стардью становится...",
   "...@key.": "...@key.",
-  "Well, congratulations @key... It looks like you outscored @player by @number points. ": "Что ж, поздравляем тебя @key... Ты смог обогнать @player на @number очков. ^Что ж, поздравляем тебя @key... Ты смогла обогнать @player на @number очков. ",
+  "Well, congratulations @key... It looks like you outscored @player by @number points. ": "Что ж, поздравляем тебя @key... Ты смог обогнать @player на @number очков.^Что ж, поздравляем тебя @key... Ты смогла обогнать @player на @number очков.",
   "Of course I did. I never considered @player a threat even for a millisecond.": "Конечно же, я сделал это. Я все время был уверен, что @player не представляет угрозы для меня.",
   "...Sorry @player. You did well, but you didn't accomplish enough to win.": "...Мне жаль, @player. Ты сделал все, что мог, но этого оказалось не достаточно для победы.^...Мне жаль, @player. Ты сделала все, что могла, но этого оказалось не достаточно для победы.",
   "__comment": "Emily says",
-  "Don't be sad, @player... We still love you.": "Не расстраивайся, @player... Мы все еще любим тебя.",
+  "Don't be sad, @player... We still love you.": "Не расстраивайся, @player... Мы все ещё любим тебя.",
   "__comment": "message",
   "Final score: @number@newlineBetter luck next time!": "Окончательный результат: @number@newlineУдачи в следующий раз!",
   "Unfortunately, @player was so jealous of my incredible farm that he did everything possible to drag me down!": "К сожалению, @player настолько сильно завидовал, что сделал все возможное, чтобы унизить меня!",
