--- a/MultiLanguage/languages/RU/dictionaries/Quests.json
+++ b/MultiLanguage/languages/RU/dictionaries/Quests.json
@@ -3,10 +3,10 @@
   "You received a letter from the local wizard. He claims to have information regarding the old community center.": "Вы получили письмо от местного волшебника. Он утверждает что у него есть информация о старом общественном центре.",
   "Enter the wizard's tower.": "Войти в башню волшебника.",
   "The Mysterious Qi": "Таинственное Ци",
-  "Within a secret lock-box, you found a note with peculiar instructions. It's signed by a 'Mr. Qi'.": "В секретном сейфе вы нашли записку со странными инструциями. Она подписана 'Мр. Ци'.",
+  "Within a secret lock-box, you found a note with peculiar instructions. It's signed by a 'Mr. Qi'.": "В секретном сейфе вы нашли записку со странными инструкциями. Она подписана 'Мр. Ци'.",
   "Leave a rainbow shell in the box at the train platform.": "Оставь радужную оболочку в поле на железнодорожной платформе.",
   "The Mysterious Qi": "Таинственное Ци",
-  "You've found another note written by 'Mr. Qi'. The request is even more unusual this time.": "Вы нашли еще одну записку подписанную 'Мр. Ци'. На этот раз просьба еще более необычная.",
+  "You've found another note written by 'Mr. Qi'. The request is even more unusual this time.": "Вы нашли ещё одну записку подписанную 'Мр. Ци'. На этот раз просьба ещё более необычная.",
   "Place 10 beets inside Mayor Lewis' fridge.": "Положи 10 свёкол в холодильник Мэра Льюиса.",
   "The Mysterious Qi": "Таинственное Ци",
   "You've found yet another strange note within the Mayor's fridge. This time, the instructions are more cryptic.": "Вы нашли очередную странную записку в холодильнике мэра. На этот раз, инструкции более загадочные.",
@@ -15,19 +15,19 @@
   "You found another note in the sand dragon's eye. It seems Mr. Qi's strange scavenger hunt has come to an end.": "Вы нашли следующую записку в глазу песчаного дракона. Кажется странная охота за мусором Мр.Ци подошла к концу.",
   "Inspect the lumber pile beside your house.": "Осмотри кучу пиломатериала рядом со своим домом.",
   "Getting Started": "Основы",
-  "If you want to become a farmer, you have to start with the basics. Use your hoe to till the soil, then use a seed packet on the tilled soil to sow a crop. Water every day until the crop is ready for harvest.": "Если хочешь стать фермером, нужно начать с малого. Используй мотыгу чтобы вспахать землю, затем используй пакет семян на вспаханной земле чтобы посадить растение. Поливай каждый день, пока уражай не будет готов к сбору.",
+  "If you want to become a farmer, you have to start with the basics. Use your hoe to till the soil, then use a seed packet on the tilled soil to sow a crop. Water every day until the crop is ready for harvest.": "Если хочешь стать фермером, нужно начать с малого. Используй мотыгу чтобы вспахать землю, затем используй пакет семян на вспаханной земле чтобы посадить растение. Поливай каждый день, пока урожай не будет готов к сбору.",
   "Cultivate and harvest a parsnip.": "Вырастить и собрать пастернак.",
   "Raising Animals": "Выращивание животных",
-  "Robin, the local carpenter, lives north of town. In exchange for raw materials and money, she'll construct new buildings on your farm. You'll need her to build a coop or barn so that you can raise animals.": "Робин, местный плотник, живет к северу от города. В обмен на материалы и деньги, она будет строить новые здания на ферме. Она понадобится вам, чтобы построить курятник или сарай, чтобы вы смогли растить животных.",
+  "Robin, the local carpenter, lives north of town. In exchange for raw materials and money, she'll construct new buildings on your farm. You'll need her to build a coop or barn so that you can raise animals.": "Робин, местный плотник, живёт к северу от города. В обмен на материалы и деньги, она будет строить новые здания на ферме. Она понадобится вам, чтобы построить курятник или сарай, чтобы вы смогли растить животных.",
   "Build a Coop.": "Построить курятник.",
-  "Advancement": "Продивжение",
-  "As you gain experience, you'll discover new crafting recipes to increase profit and make life easier. A scarecrow, for example, will prevent crows from snacking on your precious crops.": "По мере приобретения опыта, вы откроете для себя новые рецепты крафта чтобы увеличивать прибыль и упрощать жизнь. Пугало, например, будет препятствовать воронами от перекусов вашими драгоценными растениями.",
+  "Advancement": "Продвижение",
+  "As you gain experience, you'll discover new crafting recipes to increase profit and make life easier. A scarecrow, for example, will prevent crows from snacking on your precious crops.": "По мере приобретения опыта, вы откроете для себя новые рецепты крафта чтобы увеличивать прибыль, и упрощать жизнь. Пугало, например, будет препятствовать воронами от перекусов вашими драгоценными растениями.",
   "Reach Farming level 1 and craft a scarecrow.": "Достичь 1 уровня Фермерства и создать пугало.",
   "Introductions": "Представиться горожанам",
   "It would be a nice gesture to introduce yourself around town. Some people might be anxious to meet the new farmer.": "Было бы хорошим жестом представиться людям в городе. Некоторым из них не терпится познакомиться с новым фермером.",
   ".": ".",
   "Copper Ore": "Медная руда",
-  "You found a piece of copper ore. You're not sure what you can use it for, but the local blacksmith ought to know.": "Вы нашли кусок медной руды. Вы не уверены, для чего его можено использовать, но местный кузнец должен знать.",
+  "You found a piece of copper ore. You're not sure what you can use it for, but the local blacksmith ought to know.": "Вы нашли кусок медной руды. Вы не уверены, для чего его можно использовать, но местный кузнец должен знать.",
   "Bring a piece of copper ore to Clint's blacksmith shop.": "Принесите кусок медной руды в кузницу Клинта.",
   "Forging Ahead": "Ковка впереди",
   "If you're going to keep mining, you should build a furnace.": "Если вы собираетесь продолжать копать, вам нужно построить печь",
@@ -36,7 +36,7 @@
   "Now that you've built a furnace, you can smelt some metal. According to Clint's instructions, if you place 5 copper ore and 1 piece of coal in the furnace, it should produce a copper bar.": "Теперь, когда вы построили печь, вы можете плавить металлы. В соответствии с инструкциями Клинта, если вы поместите 5 кусков медной руды и 1 часть угля в печи, должен получиться медный слиток.",
   "Use your furnace to smelt a Copper Bar.": "Используйте печь чтобы выплавить медный слиток.",
   "To The Beach": "На Пляж",
-  "Someone named Willy invited you to visit the beach south of town. He says he has something to give you.": "Кто-то по имени Вилли приглашает вас посетить пляж к югу от города. Он говорит, что у него есть что-то, что он хочеть дать вам.",
+  "Someone named Willy invited you to visit the beach south of town. He says he has something to give you.": "Кто-то по имени Вилли приглашает вас посетить пляж к югу от города. Он говорит, что у него есть что-то, что он хочет дать вам.",
   "Visit the beach south of town before 5:00pm.": "Посетите пляж к югу от города до 5:00 вечера.",
   "Explore The Mine": "Исследовать Шахту",
   "There's an old mine shaft in the mountains north of town. There could be valuable minerals inside, but Marlon hinted that it might be dangerous.": "В горах к северу от города есть старая шахта. Внутри могут быть ценные минералы, но Марлон намекнул, что это может быть опасно.",
@@ -47,23 +47,23 @@
   "Initiation": "Инициация",
   "You sucessfully dispatched 10 slimes. Now you can enter the Adventurer's Guild.": "Вы отправили на тот свет 10 слизней. Теперь вы можете вступить в Гильдию Искателей Приключений",
   "Enter the Adventurer's Guild.": "Вступить в гильдию искателей приключений.",
-  "Deeper In The Mine": "Еще глубже в шахту",
-  "It seems that the mine elevator is still functional. It will allow you to quickly return to any elevator doors you've discovered. A deeper expedition might be in order.": "Кажется лифт в шахте еще работает. С его помощью Вы можете быстро вернуться на любой этаж оборудованный входом в лифт. Так что теперь вы можете спуститься еще глубже.",
+  "Deeper In The Mine": "Ещё глубже в шахту",
+  "It seems that the mine elevator is still functional. It will allow you to quickly return to any elevator doors you've discovered. A deeper expedition might be in order.": "Кажется лифт в шахте ещё работает. С его помощью Вы можете быстро вернуться на любой этаж оборудованный входом в лифт. Так что теперь вы можете спуститься ещё глубже.",
   "Reach level 40 in the mines.": "Достигните 40 этажа шахты.",
   "To The Bottom?": "На дно?",
-  "So far, there's no sign of the bottom. How low does it go?": "Шахта уходит еще глубже. Сколько этажей еще там этажей?",
+  "So far, there's no sign of the bottom. How low does it go?": "Шахта уходит ещё глубже. Сколько этажей ещё там этажей?",
   "Reach the bottom of the mine.": "Доберитесь до дна шахты.",
   "The Skull Key": "Ключ-Череп",
   "You found a strange looking key in the bottom of the mines.": "На самом дне шахты Вы нашли странный ключ. ",
   "Discover the purpose of the Skull Key.": "Узнайте предназначение Ключа-Черепа.",
   "Qi's Challenge": "Вызов Цы",
-  "You've been challenged to reach level 25 in the skull cavern. You've been promised a substantial reward if you're successful.": "Вам бросили вызов, достичь 25 уровня в пещере черепов. Если вы приуспеете вам обещали значительное вознаграждение.",
+  "You've been challenged to reach level 25 in the skull cavern. You've been promised a substantial reward if you're successful.": "Вам бросили вызов, достичь 25 уровня в пещере черепов. Если вы преуспеете вам обещали значительное вознаграждение.",
   "Reach level 25 in the Skull Cavern.": "Достигнуть 25 уровня в пещере черепов.",
   "Marnie's Request": "Просьба Марни",
-  "Marnie came by the farm and asked if you'd bring her a cave carrot. She's trying to train her goats to speak, and cave carrot is their favorite snack.": "Марни пришел на ферму и спросил, могли бы вы принести ей пещерную морковь. Она пытается обучить своих коз говорить, а пещерная морковь их любимым лакомство.",
+  "Marnie came by the farm and asked if you'd bring her a cave carrot. She's trying to train her goats to speak, and cave carrot is their favorite snack.": "Марни пришёл на ферму и спросил, могли бы вы принести ей пещерную морковь. Она пытается обучить своих коз говорить, а пещерная морковь их любимым лакомство.",
   "Bring a Cave Carrot into Marnie's shop.": "Принести пещерную Морковь в магазин.",
   "Fish Casserole": "Рыбная Запеканка",
-  "Jodi swung by the farm to ask you to dinner at 7:00 PM. Her only request was that you bring a largemouth bass for her fish casserole.": "Джоди зашла на ферму, чтобы пригласить вас на ужин в 7:00 вечера. Её единственной просьбой было, чтоьбы вы принесли окуня для ее рыбной запеканки.",
+  "Jodi swung by the farm to ask you to dinner at 7:00 PM. Her only request was that you bring a largemouth bass for her fish casserole.": "Джоди зашла на ферму, чтобы пригласить вас на ужин в 7:00 вечера. Её единственной просьбой было, чтобы вы принесли окуня для рыбной запеканки.",
   "Enter Jodi's house with a largemouth bass at 7:00 PM.": "Зайти домой к Джоди с окунем в 7:00 PM.",
   "Archaeology": "Археология",
   "You found an ancient-looking object. Could it be some kind of artifact from long ago? Perhaps Gunther, curator of the local museum, has the answer.": "Вы нашли древний с виду предмет. Может быть это какой-то артефакт из давнего прошлого? Возможно, Гюнтер, куратор местного музея, знает ответ.",
@@ -71,7 +71,7 @@
   "Archaeology": "Археология",
   "Gunther asked if you'd consider donating any new artifacts or minerals you find to the museum. He says he'll compensate you by way of occasional rare goods.": "Гюнтер попросил, пожертвавать музею какие-нибудь артефакты или минералы, которые вы нашли. Он говорит, что компенсирует вам пожертвования случайными редкими предметами.",
   "Donate an artifact or a mineral to the museum.": "Пожертвовать артефакт или минералы музею.",
-  "How To Win Friends": "Как завоевывать друзей",
+  "How To Win Friends": "Как завоёвывать друзей",
   "Giving gifts is a great way to build friendships. Learn each person's individual tastes and you'll be popular in no time.": "Дарение подарков - отличный способ построить дружеские отношения. Узнайте индивидуальные вкусы каждого человека, и вы быстро станете популярны.",
   "Give someone a gift.": "Подарить кому-нибудь подарок.",
   "\"Rat Problem\"": "\"Проблема с Крысами\"",
@@ -80,15 +80,15 @@
   "Robin's Lost Axe": "Потерянный топор Робин",
   "Robin lost her favorite axe. The last time she remembers using it, she was cutting wood south of Marnie's ranch.": "Робин потеряла свой любимый топор. В последний раз как она помнит, что использовала его, она рубила деревья к югу от ранчо Марни.",
   "Find Robin's lost axe.": "Найти потерянный топор Робин.",
-  "Hey, you found my axe! What a relief... I almost chopped my toe off with the other one I was using. Thank you!": "Эй, вы нашли мой топор! Какое облегчение ... Я чуть не отрубила себе палец когда пользовалась другим. Спасибо!",
+  "Hey, you found my axe! What a relief... I almost chopped my toe off with the other one I was using. Thank you!": "Эй, вы нашли мой топор! Какое облегчение... Я чуть не отрубила себе палец когда пользовалась другим. Спасибо!",
   "Jodi's Request": "Просьба Джоди",
   "Jodi needs a fresh cauliflower for a recipe she's making. She's asking you to bring her one.": "Джоди нужна свежая цветная капуста для рецепта который она делает. Она просит вас принести ей одну.",
   "Bring Jodi a cauliflower.": "Принести Джоди цветную капусту.",
-  "Oh, that looks so delicious! Thank you, this is just what I wanted. It's going to be perfect for my yellow curry.": "О, это выглядит так аппетитно! Спасибо, это как раз то, что нужно. Она идеально подойдет для моего желтого карри.",
-  "Mayor's \"Shorts\"": "\"Штаны\" Мэра",
-  "Mayor Lewis has lost his purple \"shorts\". He's asking you to find and return them... Discreetly.": "Мэр Льюис потерял свои фиолетовые \"штаны\". Он просит Вас найти и вернуть их... Незаметно.",
-  "Find and return Mayor Lewis' purple shorts.": "Найти и вернуть фиолетовые штаны Мэра Льюиса.",
-  "You found them... where? ...Oh!...Uhmm...Heh.#$b#There? I have no idea how they could've gotten there...*cough*#$b#This stays between you and me. Got it?$u": "Вы нашли их... где? ...Ох!...Эммм...Хех.#$b#Там? Я понятия не имею как они могли там оказаться...*кашляет*#$b#Пусть это останется между нами. Понятно?$u",
+  "Oh, that looks so delicious! Thank you, this is just what I wanted. It's going to be perfect for my yellow curry.": "О, это выглядит так аппетитно! Спасибо, это как раз то, что нужно. Она идеально подойдёт для моего жёлтого карри.",
+  "Mayor's \"Shorts\"": "\"Шорты\" Мэра",
+  "Mayor Lewis has lost his purple \"shorts\". He's asking you to find and return them... Discreetly.": "Мэр Льюис потерял свои фиолетовые \"шорты\". Он просит Вас найти и вернуть их... Незаметно.",
+  "Find and return Mayor Lewis' purple shorts.": "Найти и вернуть фиолетовые шорты Мэра Льюиса.",
+  "You found them... where? ...Oh!...Uhmm...Heh.#$b#There? I have no idea how they could've gotten there...*cough*#$b#This stays between you and me. Got it?$u": "Вы нашли их... где? ...Ох! ...Эммм ...Хех.#$b#Там? Я понятия не имею как они могли там оказаться...*кашляет*#$b#Пусть это останется между нами. Понятно?$u",
   "Pam Is Thirsty": "Жаждущая Пэм",
   "Pam is hankerin' for a pale ale. Regular old beer won't do. You can brew one yourself if you have hops and a keg.": "Пэм очень хочет светлое пиво. Обычное старое пиво не подходит. Вы можете сварить его самостоятельно, если у вас есть хмель и бочонок.",
   "Bring Pam a pale ale.": "Принести Пэм светлое пиво.",
@@ -97,7 +97,7 @@
   "Demetrius needs a fresh melon for his research.": "Деметриус нуждается в свежей дыни для его исследования.",
   "Bring Demetrius a melon.": "Принести Деметриусу дыню.",
   "This is perfect! It's just what I need for my research. It's going to be hard not to eat it! Thanks a bunch.": "Это потрясающе! Это именно то, что нужно для моих исследований. Будет трудно не съесть его! Огромное спасибо.",
-  "Knee Therapy": "Коленотерапия",
+  "Knee Therapy": "Колено терапия",
   "George needs a hot pepper to soothe his aching knee.": "Джордж нуждается в остром перце, чтобы успокоить свое больное колено.",
   "Bring George a Hot Pepper.": "Отдать Джорджу острый Перец.",
   "Took you long enough... hmmph... Well it's good and spicy at least. Thanks.": "Я ждал тебя достаточно долго... Хммм... Ну, он по крайней мере хороший и острый. Спасибо.",
@@ -110,13 +110,13 @@
   "Find Linus' basket and return it to him.": "Найдите корзинку для Лайнуса и верните ему обратно.",
   "My basket! Thank you. This means a lot to me.$h": "Моя корзинка! Спасибо. Это много значит для меня.$h",
   "Carving Pumpkins": "Резьба на тыкве",
-  "Caroline wants to carve a pumpking with her daughter. She asked you to bring her one from the farm.": "Кэролайн хочет, чтобы Вы принесли тыкву для ее дочери. Она просит принести одну такую с Вашей фермы.",
+  "Caroline wants to carve a pumpking with her daughter. She asked you to bring her one from the farm.": "Кэролайн хочет, чтобы Вы принесли тыкву для её дочери. Она просит принести одну такую с Вашей фермы.",
   "Bring Caroline a pumpkin.": "Принести Кэролайн тыкву.",
-  "Oh, the pumpkin! It's a good one... Abigail will be so happy when she sees this. Thanks, @player!$h": "Ох, тыква! А она хороша... Эбигейл будет так счастлива когда увидит ее. Спасибо, @player!$h",
+  "Oh, the pumpkin! It's a good one... Abigail will be so happy when she sees this. Thanks, @player!$h": "Ох, тыква! А она хороша... Эбигейл будет так счастлива когда увидит её. Спасибо, @player!$h",
   "Catch A Squid": "Поймать кальмара",
   "Willy is challenging you to catch a squid. He says you can fish them from the ocean on winter nights.": "Для Вилли является сложной задачей поймать кальмара. Он говорит, что его можно поймать в океане зимней ночью.",
   "Bring Willy a squid.": "Принести Вилли кальмара.",
-  "Hey, you did it! Not bad. Not bad at all. I'm impressed.#$b#Winter's a good time to break out the old fishing rod, isn't it?": "Хей, ты сделал это! Не плохо. Совсем не плохо. Я впечатлен.#$b#Зима хорошее время, чтобы сломать старую удочку, не так ли?",
+  "Hey, you did it! Not bad. Not bad at all. I'm impressed.#$b#Winter's a good time to break out the old fishing rod, isn't it?": "Хей, ты сделал это! Не плохо. Совсем не плохо. Я впечатлён.#$b#Зима хорошее время, чтобы сломать старую удочку, не так ли?",
   "Clint's Attempt": "Попытка Клинта",
   "Clint wants you to give Emily an amethyst. He wants you to tell her it's from him.": "Клинт хочет, чтобы Вы дали Эмили аметист. Он хочет, чтобы Вы сказали, что он от него.",
   "Bring Emily an Amethyst.": "Отдать Эмили Аметист.",
